--- a/lang/bn.json
+++ b/lang/bn.json
@@ -220,7 +220,7 @@
     "boss": "বস",
     "Bought": "কিনলেন",
     "Breakdown of the current usage": "বর্তমান ব্যবহারের ভাঙ্গন",
-    "brother\/sister": "ভাই বোন",
+    "brother/sister": "ভাই/বোন",
     "Browser Sessions": "ব্রাউজার সেশন",
     "Buddhist": "বৌদ্ধ",
     "Business": "ব্যবসা",
@@ -364,7 +364,7 @@
     "Delete the photo": "ছবি মুছে দিন",
     "Delete the slice": "স্লাইস মুছুন",
     "Delete the vault": "ভল্ট মুছুন",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com এ আপনার অ্যাকাউন্ট মুছুন।",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com এ আপনার অ্যাকাউন্ট মুছুন।",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "ভল্টটি মুছে ফেলার অর্থ এই ভল্টের সমস্ত ডেটা চিরতরে মুছে ফেলা। আর ফিরে দেখতে হবে না. দয়া করে নিশ্চিত হন।",
     "Description": "বর্ণনা",
     "Detail of a goal": "একটি লক্ষ্য বিস্তারিত",
@@ -478,7 +478,7 @@
     "Had a promotion": "পদোন্নতি ছিল",
     "Hamster": "হ্যামস্টার",
     "Have a great day,": "দিন শুভ হোক,",
-    "he\/him": "সে\/তাকে",
+    "he/him": "সে/তাকে",
     "Hello!": "হ্যালো!",
     "Help": "সাহায্য",
     "Hi :name": "হাই :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "রিমাইন্ডারের নাম",
     "Name of the reverse relationship": "বিপরীত সম্পর্কের নাম",
     "Nature of the call": "কলের প্রকৃতি",
-    "nephew\/niece": "ভাগিনা ভাগ্নি",
+    "nephew/niece": "ভাগিনা/ভাগ্নি",
     "New Password": "নতুন পাসওয়ার্ড",
     "New to Monica?": "Monica নতুন?",
     "Next": "পরবর্তী",
@@ -696,7 +696,7 @@
     "Password": "পাসওয়ার্ড",
     "Payment Required": "পেমেন্ট আবশ্যক",
     "Pending Team Invitations": "অপেক্ষারত দলের আমন্ত্রণ",
-    "per\/per": "প্রতি\/প্রতি",
+    "per/per": "প্রতি/প্রতি",
     "Permanently delete this team.": "স্থায়ীভাবে এই দল মুছে ।",
     "Permanently delete your account.": "স্থায়ীভাবে আপনার অ্যাকাউন্ট মুছে দিন ।",
     "Permission for :name": ":name এর জন্য অনুমতি",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "পরিচিতি নির্দেশ করুন",
     "Please join Monica": "Monica যোগ দিন",
     "Please provide the email address of the person you would like to add to this team.": "আপনি এই দলের যোগ করতে চাই ব্যক্তির ইমেল ঠিকানা প্রদান করুন ।",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "এই বৈশিষ্ট্য সম্পর্কে আরও জানতে এবং কোন ভেরিয়েবলগুলিতে আপনার অ্যাক্সেস আছে অনুগ্রহ করে আমাদের <link>ডকুমেন্টেশন<\/link> পড়ুন।",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "এই বৈশিষ্ট্য সম্পর্কে আরও জানতে এবং কোন ভেরিয়েবলগুলিতে আপনার অ্যাক্সেস আছে অনুগ্রহ করে আমাদের <link>ডকুমেন্টেশন</link> পড়ুন।",
     "Please select a page on the left to load modules.": "মডিউল লোড করতে দয়া করে বাম দিকে একটি পৃষ্ঠা নির্বাচন করুন৷",
     "Please type a few characters to create a new label.": "একটি নতুন লেবেল তৈরি করতে অনুগ্রহ করে কয়েকটি অক্ষর টাইপ করুন৷",
     "Please type a few characters to create a new tag.": "একটি নতুন ট্যাগ তৈরি করতে অনুগ্রহ করে কয়েকটি অক্ষর টাইপ করুন৷",
@@ -835,7 +835,7 @@
     "Setup Key": "সেটআপ কী",
     "Setup Key:": "সেটআপ কী:",
     "Setup Telegram": "টেলিগ্রাম সেটআপ করুন",
-    "she\/her": "সে\/তার",
+    "she/her": "সে/তার",
     "Shintoist": "শিন্টোবাদী",
     "Show Calendar tab": "ক্যালেন্ডার ট্যাব দেখান",
     "Show Companies tab": "কোম্পানি ট্যাব দেখান",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "ভল্ট তৈরি করা হয়েছে",
     "The vault has been deleted": "ভল্ট মুছে ফেলা হয়েছে",
     "The vault have been updated": "ভল্ট আপডেট করা হয়েছে",
-    "they\/them": "তারা তাদের",
+    "they/them": "তারা/তাদের",
     "This address is not active anymore": "এই ঠিকানা আর সক্রিয় নয়",
     "This device": "এই ডিভাইসটি",
     "This email is a test email to check if Monica can send an email to this email address.": "Monica এই ইমেল ঠিকানায় একটি ইমেল পাঠাতে পারে কিনা তা পরীক্ষা করার জন্য এই ইমেলটি একটি পরীক্ষামূলক ইমেল।",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "আর্কাইভ পরিচিতি",
     "unarchived the contact": "পরিচিতিটি সংরক্ষণাগারমুক্ত করা হয়েছে",
     "Unauthorized": "অনুমোদিত নয়",
-    "uncle\/aunt": "চাচা\/খালা",
+    "uncle/aunt": "চাচা/খালা",
     "Undefined": "অনির্ধারিত",
     "Unexpected error on login.": "লগইন এ অপ্রত্যাশিত ত্রুটি.",
     "Unknown": "অজানা",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "আপনার ক্লিপবোর্ডে মান কপি করা হয়েছে",
     "Vaults contain all your contacts data.": "ভল্টে আপনার সমস্ত পরিচিতি ডেটা থাকে।",
     "Vault settings": "ভল্ট সেটিংস",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "যাচাইকরণ ইমেল পাঠানো হয়েছে",
     "Verified": "যাচাই",
     "Verify Email Address": "ই-মেইল ঠিকানা যাচাই করুন",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "100.50 এর মতো দশমিকের প্রয়োজন হলে একটি বিন্দু দিয়ে পরিমাণটি লিখুন",
     "Written on": "উপর লিখিত",
     "wrote a note": "একটি নোট লিখেছেন",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "বছর",
     "Years": "বছর",
     "You are here:": "তুমি এখানে:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "আপনি যে কোনো সময় এটি পরিবর্তন করতে পারেন.",
     "You can choose how you want Monica to display dates in the application.": "আপনি কীভাবে Monicaকে অ্যাপ্লিকেশনটিতে তারিখগুলি প্রদর্শন করতে চান তা চয়ন করতে পারেন৷",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "আপনার অ্যাকাউন্টে কোন মুদ্রা সক্ষম করা উচিত এবং কোনটি উচিত নয় তা আপনি চয়ন করতে পারেন৷",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "আপনার নিজস্ব স্বাদ\/সংস্কৃতি অনুযায়ী পরিচিতিগুলি কীভাবে প্রদর্শিত হবে তা আপনি কাস্টমাইজ করতে পারেন। সম্ভবত আপনি বন্ড জেমসের পরিবর্তে জেমস বন্ড ব্যবহার করতে চান। এখানে, আপনি ইচ্ছামত এটি সংজ্ঞায়িত করতে পারেন.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "আপনার নিজস্ব স্বাদ/সংস্কৃতি অনুযায়ী পরিচিতিগুলি কীভাবে প্রদর্শিত হবে তা আপনি কাস্টমাইজ করতে পারেন। সম্ভবত আপনি বন্ড জেমসের পরিবর্তে জেমস বন্ড ব্যবহার করতে চান। এখানে, আপনি ইচ্ছামত এটি সংজ্ঞায়িত করতে পারেন.",
     "You can customize the criteria that let you track your mood.": "আপনি মানদণ্ড কাস্টমাইজ করতে পারেন যা আপনাকে আপনার মেজাজ ট্র্যাক করতে দেয়।",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "আপনি vaults মধ্যে পরিচিতি সরাতে পারেন. এই পরিবর্তন তাৎক্ষণিক। আপনি পরিচিতিগুলিকে শুধুমাত্র সেই ভল্টে স্থানান্তর করতে পারেন যার অংশ আপনি৷ সমস্ত পরিচিতি ডেটা এটির সাথে সরানো হবে।",
     "You cannot remove your own administrator privilege.": "আপনি আপনার নিজের প্রশাসক বিশেষাধিকার সরাতে পারবেন না.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "আপনি নিম্নলিখিত মনে করিয়ে দিতে চেয়েছিলেন:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "আপনাকে এখনও Monica বা অফিসলাইফে আপনার অ্যাকাউন্ট মুছতে হবে।",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "আপনাকে Monica এই ইমেল ঠিকানাটি ব্যবহার করার জন্য আমন্ত্রণ জানানো হয়েছে, একটি ওপেন সোর্স ব্যক্তিগত CRM, যাতে আমরা আপনাকে বিজ্ঞপ্তি পাঠাতে এটি ব্যবহার করতে পারি।",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ বিপদ অঞ্চল",
     "🌳 Chalet": "🌳 চালেট",
     "🏠 Secondary residence": "🏠 মাধ্যমিক বাসস্থান",
