--- a/lang/da.json
+++ b/lang/da.json
@@ -220,7 +220,7 @@
     "boss": "chef",
     "Bought": "Købt",
     "Breakdown of the current usage": "Opdeling af det aktuelle forbrug",
-    "brother\/sister": "bror\/søster",
+    "brother/sister": "bror/søster",
     "Browser Sessions": "Browser Sessioner",
     "Buddhist": "buddhist",
     "Business": "Forretning",
@@ -364,7 +364,7 @@
     "Delete the photo": "Slet billedet",
     "Delete the slice": "Slet skiven",
     "Delete the vault": "Slet boksen",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Slet din konto på https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Slet din konto på https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Sletning af boksen betyder at slette alle data inde i denne boks, for evigt. Der er ingen vej tilbage. Vær sikker.",
     "Description": "Beskrivelse",
     "Detail of a goal": "Detalje af et mål",
@@ -478,7 +478,7 @@
     "Had a promotion": "Havde en forfremmelse",
     "Hamster": "Hamster",
     "Have a great day,": "Hav en god dag,",
-    "he\/him": "han\/ham",
+    "he/him": "han/ham",
     "Hello!": "Hej!",
     "Help": "Hjælp",
     "Hi :name": "Hej :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Påmindelsens navn",
     "Name of the reverse relationship": "Navn på det omvendte forhold",
     "Nature of the call": "Opkaldets art",
-    "nephew\/niece": "nevø niece",
+    "nephew/niece": "nevø/niece",
     "New Password": "Nyt kodeord",
     "New to Monica?": "Ny for Monica?",
     "Next": "Næste",
@@ -696,7 +696,7 @@
     "Password": "Adgangskode",
     "Payment Required": "Betaling påkrævet",
     "Pending Team Invitations": "Afventende team Invitationer",
-    "per\/per": "pr\/pr",
+    "per/per": "pr/pr",
     "Permanently delete this team.": "Slet dette hold permanent.",
     "Permanently delete your account.": "Slet din konto permanent.",
     "Permission for :name": "Tilladelse til :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Angiv venligst kontakterne",
     "Please join Monica": "Slut dig til Monica",
     "Please provide the email address of the person you would like to add to this team.": "Angiv venligst e-mailadressen på den person, du gerne vil tilføje til dette team.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Læs venligst vores <link>dokumentation<\/link> for at vide mere om denne funktion, og hvilke variabler du har adgang til.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Læs venligst vores <link>dokumentation</link> for at vide mere om denne funktion, og hvilke variabler du har adgang til.",
     "Please select a page on the left to load modules.": "Vælg venligst en side til venstre for at indlæse moduler.",
     "Please type a few characters to create a new label.": "Indtast et par tegn for at oprette en ny etiket.",
     "Please type a few characters to create a new tag.": "Indtast venligst et par tegn for at oprette et nyt tag.",
@@ -835,7 +835,7 @@
     "Setup Key": "Opsætningsnøgle",
     "Setup Key:": "Opsætningsnøgle:",
     "Setup Telegram": "Opsætning af telegram",
-    "she\/her": "hun hende",
+    "she/her": "hun/hende",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Vis fanen Kalender",
     "Show Companies tab": "Vis firmaer fanen",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Hvælvingen er blevet oprettet",
     "The vault has been deleted": "Hvælvingen er blevet slettet",
     "The vault have been updated": "Hvælvingen er blevet opdateret",
-    "they\/them": "de\/dem",
+    "they/them": "de/dem",
     "This address is not active anymore": "Denne adresse er ikke længere aktiv",
     "This device": "Denne enhed",
     "This email is a test email to check if Monica can send an email to this email address.": "Denne e-mail er en test-e-mail for at tjekke, om Monica kan sende en e-mail til denne e-mailadresse.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Fjern kontakten fra arkivet",
     "unarchived the contact": "arkiverede kontakten",
     "Unauthorized": "Uautoriseret",
-    "uncle\/aunt": "onkel tante",
+    "uncle/aunt": "onkel/tante",
     "Undefined": "Udefineret",
     "Unexpected error on login.": "Uventet fejl ved login.",
     "Unknown": "Ukendt",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Værdien er kopieret til din udklipsholder",
     "Vaults contain all your contacts data.": "Vaults indeholder alle dine kontaktdata.",
     "Vault settings": "Vault-indstillinger",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Bekræftelsesmail sendt",
     "Verified": "Verificeret",
     "Verify Email Address": "Bekræft email-adresse",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Skriv beløbet med en prik, hvis du har brug for decimaler, f.eks. 100,50",
     "Written on": "Skrevet på",
     "wrote a note": "skrev en note",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "år",
     "Years": "Flere år",
     "You are here:": "Du er her:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Du kan til enhver tid ændre det.",
     "You can choose how you want Monica to display dates in the application.": "Du kan vælge, hvordan du vil have Monica til at vise datoer i applikationen.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Du kan vælge, hvilke valutaer der skal aktiveres på din konto, og hvilken der ikke skal.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan tilpasse, hvordan kontakter skal vises efter din egen smag\/kultur. Måske vil du bruge James Bond i stedet for Bond James. Her kan du definere det efter behag.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan tilpasse, hvordan kontakter skal vises efter din egen smag/kultur. Måske vil du bruge James Bond i stedet for Bond James. Her kan du definere det efter behag.",
     "You can customize the criteria that let you track your mood.": "Du kan tilpasse kriterierne, så du kan spore dit humør.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Du kan flytte kontakter mellem hvælvinger. Denne ændring er øjeblikkelig. Du kan kun flytte kontakter til hvælvinger, du er en del af. Alle kontaktdata flyttes med den.",
     "You cannot remove your own administrator privilege.": "Du kan ikke fjerne dit eget administratorprivilegium.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Du ønskede at blive mindet om følgende:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Du SKAL stadig slette din konto på Monica eller OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Du er blevet inviteret til at bruge denne e-mailadresse i Monica, en open source personlig CRM, så vi kan bruge den til at sende dig notifikationer.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Farezone",
     "🌳 Chalet": "🌳 Hytte",
     "🏠 Secondary residence": "🏠 Sekundær bolig",
