--- a/lang/de.json
+++ b/lang/de.json
@@ -220,7 +220,7 @@
     "boss": "Chef",
     "Bought": "Gekauft",
     "Breakdown of the current usage": "Aufschlüsselung der aktuellen Nutzung",
-    "brother\/sister": "Bruder Schwester",
+    "brother/sister": "Bruder/Schwester",
     "Browser Sessions": "Browsersitzungen",
     "Buddhist": "Buddhist",
     "Business": "Geschäft",
@@ -364,7 +364,7 @@
     "Delete the photo": "Löschen Sie das Foto",
     "Delete the slice": "Löschen Sie das Slice",
     "Delete the vault": "Löschen Sie den Tresor",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Löschen Sie Ihr Konto auf https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Löschen Sie Ihr Konto auf https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Das Löschen des Tresors bedeutet, dass alle Daten in diesem Tresor für immer gelöscht werden. Es gibt kein Zurück. Bitte seien Sie sicher.",
     "Description": "Beschreibung",
     "Detail of a goal": "Detail eines Ziels",
@@ -478,7 +478,7 @@
     "Had a promotion": "Hatte eine Beförderung",
     "Hamster": "Hamster",
     "Have a great day,": "Ich wünsche ihnen einen wunderbaren Tag,",
-    "he\/him": "er ihm",
+    "he/him": "er/ihm",
     "Hello!": "Hallo!",
     "Help": "Helfen",
     "Hi :name": "Hallo :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Name der Erinnerung",
     "Name of the reverse relationship": "Name der umgekehrten Beziehung",
     "Nature of the call": "Art des Anrufs",
-    "nephew\/niece": "Neffe Nichte",
+    "nephew/niece": "Neffe/Nichte",
     "New Password": "Neues Passwort",
     "New to Monica?": "Neu bei Monica?",
     "Next": "Nächste",
@@ -696,7 +696,7 @@
     "Password": "Passwort",
     "Payment Required": "Zahlung erforderlich",
     "Pending Team Invitations": "Ausstehende Team Einladungen",
-    "per\/per": "pro\/pro",
+    "per/per": "pro/pro",
     "Permanently delete this team.": "Löschen Sie dieses Team dauerhaft.",
     "Permanently delete your account.": "Löschen Sie Ihren Account dauerhaft.",
     "Permission for :name": "Erlaubnis für :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Bitte geben Sie die Kontakte an",
     "Please join Monica": "Bitte schließen Sie sich Monica an",
     "Please provide the email address of the person you would like to add to this team.": "Bitte geben Sie die E-Mail-Adresse der Person an, die Sie diesem Team hinzufügen möchten.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Bitte lesen Sie unsere <link>Dokumentation<\/link>, um mehr über diese Funktion zu erfahren und auf welche Variablen Sie Zugriff haben.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Bitte lesen Sie unsere <link>Dokumentation</link>, um mehr über diese Funktion zu erfahren und auf welche Variablen Sie Zugriff haben.",
     "Please select a page on the left to load modules.": "Bitte wählen Sie links eine Seite aus, um Module zu laden.",
     "Please type a few characters to create a new label.": "Bitte geben Sie ein paar Zeichen ein, um ein neues Etikett zu erstellen.",
     "Please type a few characters to create a new tag.": "Bitte geben Sie ein paar Zeichen ein, um ein neues Tag zu erstellen.",
@@ -835,7 +835,7 @@
     "Setup Key": "Einrichtungsschlüssel",
     "Setup Key:": "Setup-Schlüssel:",
     "Setup Telegram": "Setup-Telegramm",
-    "she\/her": "sie\/sie",
+    "she/her": "sie/sie",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Registerkarte „Kalender“ anzeigen",
     "Show Companies tab": "Registerkarte „Unternehmen“ anzeigen",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Der Tresor wurde erstellt",
     "The vault has been deleted": "Der Tresor wurde gelöscht",
     "The vault have been updated": "Der Tresor wurde aktualisiert",
-    "they\/them": "Sie ihnen",
+    "they/them": "Sie/ihnen",
     "This address is not active anymore": "Diese Adresse ist nicht mehr aktiv",
     "This device": "Dieses Gerät",
     "This email is a test email to check if Monica can send an email to this email address.": "Bei dieser E-Mail handelt es sich um eine Test-E-Mail, um zu prüfen, ob Monica eine E-Mail an diese E-Mail-Adresse senden kann.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Kontakt aus dem Archiv entfernen",
     "unarchived the contact": "Der Kontakt wurde aus der Archivierung entfernt",
     "Unauthorized": "Nicht autorisiert",
-    "uncle\/aunt": "Onkel, Tante",
+    "uncle/aunt": "Onkel,/Tante",
     "Undefined": "Nicht definiert",
     "Unexpected error on login.": "Unerwarteter Fehler beim Anmelden.",
     "Unknown": "Unbekannt",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Wert in Ihre Zwischenablage kopiert",
     "Vaults contain all your contacts data.": "Tresore enthalten alle Ihre Kontaktdaten.",
     "Vault settings": "Tresoreinstellungen",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Bestätigungs-E-Mail gesendet",
     "Verified": "Verifiziert",
     "Verify Email Address": "E-Mail-Adresse bestätigen",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Schreiben Sie den Betrag mit einem Punkt, wenn Sie Dezimalzahlen benötigen, z. B. 100,50",
     "Written on": "Geschrieben auf",
     "wrote a note": "habe eine Notiz geschrieben",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "Jahr",
     "Years": "Jahre",
     "You are here:": "Sie sind hier:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Das können Sie jederzeit ändern.",
     "You can choose how you want Monica to display dates in the application.": "Sie können wählen, wie Monica Datumsangaben in der Anwendung anzeigen soll.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Sie können auswählen, welche Währungen in Ihrem Konto aktiviert sein sollen und welche nicht.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Sie können anpassen, wie Kontakte entsprechend Ihrem eigenen Geschmack\/Ihrer eigenen Kultur angezeigt werden sollen. Vielleicht möchten Sie James Bond anstelle von Bond James verwenden. Hier können Sie es nach Belieben definieren.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Sie können anpassen, wie Kontakte entsprechend Ihrem eigenen Geschmack/Ihrer eigenen Kultur angezeigt werden sollen. Vielleicht möchten Sie James Bond anstelle von Bond James verwenden. Hier können Sie es nach Belieben definieren.",
     "You can customize the criteria that let you track your mood.": "Sie können die Kriterien anpassen, mit denen Sie Ihre Stimmung verfolgen können.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Sie können Kontakte zwischen Tresoren verschieben. Diese Änderung erfolgt unmittelbar. Sie können Kontakte nur in Tresore verschieben, denen Sie angehören. Alle Kontaktdaten werden mit verschoben.",
     "You cannot remove your own administrator privilege.": "Sie können Ihre eigenen Administratorrechte nicht entfernen.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Sie möchten an Folgendes erinnert werden:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Sie müssen Ihr Konto bei Monica oder OfficeLife trotzdem löschen.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Sie wurden eingeladen, diese E-Mail-Adresse in Monica, einem persönlichen Open-Source-CRM, zu verwenden, damit wir Ihnen damit Benachrichtigungen senden können.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Gefahrenzone",
     "🌳 Chalet": "🌳 Chalet",
     "🏠 Secondary residence": "🏠 Zweitwohnsitz",
