--- a/lang/el.json
+++ b/lang/el.json
@@ -220,7 +220,7 @@
     "boss": "αφεντικό",
     "Bought": "Αγορασμένος",
     "Breakdown of the current usage": "Ανάλυση της τρέχουσας χρήσης",
-    "brother\/sister": "αδερφός αδερφή",
+    "brother/sister": "αδερφός/αδερφή",
     "Browser Sessions": "Συνεδρίες Προγράμματος Περιήγησης",
     "Buddhist": "βουδιστής",
     "Business": "Επιχείρηση",
@@ -364,7 +364,7 @@
     "Delete the photo": "Διαγράψτε τη φωτογραφία",
     "Delete the slice": "Διαγράψτε τη φέτα",
     "Delete the vault": "Διαγράψτε το θησαυροφυλάκιο",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Διαγράψτε τον λογαριασμό σας στη διεύθυνση https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Διαγράψτε τον λογαριασμό σας στη διεύθυνση https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Διαγραφή του θησαυροφυλακίου σημαίνει διαγραφή όλων των δεδομένων μέσα σε αυτό το θησαυροφυλάκιο, για πάντα. Δεν υπάρχει γυρισμός. Παρακαλώ να είστε σίγουροι.",
     "Description": "Περιγραφή",
     "Detail of a goal": "Λεπτομέρεια ενός στόχου",
@@ -478,7 +478,7 @@
     "Had a promotion": "Είχε προαγωγή",
     "Hamster": "Χάμστερ",
     "Have a great day,": "Να έχεις μια υπέροχη μέρα,",
-    "he\/him": "αυτός αυτόν",
+    "he/him": "αυτός/αυτόν",
     "Hello!": "Χαίρετε!",
     "Help": "Βοήθεια",
     "Hi :name": "Γεια :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Όνομα της υπενθύμισης",
     "Name of the reverse relationship": "Όνομα της αντίστροφης σχέσης",
     "Nature of the call": "Φύση της κλήσης",
-    "nephew\/niece": "ανιψιός ανιψιά",
+    "nephew/niece": "ανιψιός/ανιψιά",
     "New Password": "Νέος Κωδικός Πρόσβασης",
     "New to Monica?": "Νέος στη Monica;",
     "Next": "Επόμενο",
@@ -696,7 +696,7 @@
     "Password": "Κωδικός",
     "Payment Required": "Απαιτείται πληρωμή",
     "Pending Team Invitations": "Εκκρεμείς Προσκλήσεις Ομάδας",
-    "per\/per": "ανά\/ανά",
+    "per/per": "ανά/ανά",
     "Permanently delete this team.": "Διαγράψτε οριστικά αυτήν την ομάδα.",
     "Permanently delete your account.": "Διαγράψτε μόνιμα το λογαριασμό σας.",
     "Permission for :name": "Άδεια για :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Σημειώστε τις επαφές",
     "Please join Monica": "Παρακαλώ εγγραφείτε στη Monica",
     "Please provide the email address of the person you would like to add to this team.": "Δώστε τη διεύθυνση ηλεκτρονικού ταχυδρομείου του ατόμου που θέλετε να προσθέσετε σε αυτήν την ομάδα.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Διαβάστε την <link>τεκμηρίωσή μας<\/link> για να μάθετε περισσότερα σχετικά με αυτήν τη δυνατότητα και σε ποιες μεταβλητές έχετε πρόσβαση.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Διαβάστε την <link>τεκμηρίωσή μας</link> για να μάθετε περισσότερα σχετικά με αυτήν τη δυνατότητα και σε ποιες μεταβλητές έχετε πρόσβαση.",
     "Please select a page on the left to load modules.": "Επιλέξτε μια σελίδα στα αριστερά για να φορτώσετε ενότητες.",
     "Please type a few characters to create a new label.": "Πληκτρολογήστε μερικούς χαρακτήρες για να δημιουργήσετε μια νέα ετικέτα.",
     "Please type a few characters to create a new tag.": "Πληκτρολογήστε μερικούς χαρακτήρες για να δημιουργήσετε μια νέα ετικέτα.",
@@ -835,7 +835,7 @@
     "Setup Key": "Κλειδί ρύθμισης",
     "Setup Key:": "Κλειδί ρύθμισης:",
     "Setup Telegram": "Ρύθμιση Telegram",
-    "she\/her": "αυτή\/αυτή",
+    "she/her": "αυτή/αυτή",
     "Shintoist": "Σιντοϊστής",
     "Show Calendar tab": "Εμφάνιση καρτέλας Ημερολόγιο",
     "Show Companies tab": "Εμφάνιση καρτέλας Εταιρείες",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Το θησαυροφυλάκιο έχει δημιουργηθεί",
     "The vault has been deleted": "Το θησαυροφυλάκιο έχει διαγραφεί",
     "The vault have been updated": "Το θησαυροφυλάκιο έχει ενημερωθεί",
-    "they\/them": "αυτοί\/αυτοί",
+    "they/them": "αυτοί/αυτοί",
     "This address is not active anymore": "Αυτή η διεύθυνση δεν είναι πλέον ενεργή",
     "This device": "Αυτή η συσκευή",
     "This email is a test email to check if Monica can send an email to this email address.": "Αυτό το email είναι ένα δοκιμαστικό email για να ελέγξετε αν η Monica μπορεί να στείλει ένα email σε αυτήν τη διεύθυνση email.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Κατάργηση αρχειοθέτησης επαφής",
     "unarchived the contact": "κατάργησε την αρχειοθέτηση της επαφής",
     "Unauthorized": "Χωρίς εξουσιοδότηση",
-    "uncle\/aunt": "θείος θεία",
+    "uncle/aunt": "θείος/θεία",
     "Undefined": "Απροσδιόριστος",
     "Unexpected error on login.": "Απροσδόκητο σφάλμα κατά τη σύνδεση.",
     "Unknown": "Αγνωστος",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Η τιμή αντιγράφηκε στο πρόχειρό σας",
     "Vaults contain all your contacts data.": "Τα θησαυροφυλάκια περιέχουν όλα τα δεδομένα των επαφών σας.",
     "Vault settings": "Ρυθμίσεις θησαυροφυλάκιου",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Το email επαλήθευσης στάλθηκε",
     "Verified": "Επαληθεύτηκε",
     "Verify Email Address": "Επιβεβαιώστε τη διεύθυνση ηλεκτρονικού ταχυδρομείου",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Γράψτε το ποσό με μια τελεία εάν χρειάζεστε δεκαδικά, όπως 100,50",
     "Written on": "Γραμμένο επάνω",
     "wrote a note": "έγραψε ένα σημείωμα",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "έτος",
     "Years": "Χρόνια",
     "You are here:": "Είστε εδώ:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Μπορείτε να το αλλάξετε ανά πάσα στιγμή.",
     "You can choose how you want Monica to display dates in the application.": "Μπορείτε να επιλέξετε πώς θέλετε η Monica να εμφανίζει ημερομηνίες στην εφαρμογή.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Μπορείτε να επιλέξετε ποια νομίσματα θα πρέπει να είναι ενεργοποιημένα στον λογαριασμό σας και ποια όχι.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Μπορείτε να προσαρμόσετε τον τρόπο εμφάνισης των επαφών σύμφωνα με το δικό σας γούστο\/κουλτούρα. Ίσως θα θέλατε να χρησιμοποιήσετε τον Τζέιμς Μποντ αντί για τον Μποντ Τζέιμς. Εδώ, μπορείτε να το ορίσετε κατά βούληση.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Μπορείτε να προσαρμόσετε τον τρόπο εμφάνισης των επαφών σύμφωνα με το δικό σας γούστο/κουλτούρα. Ίσως θα θέλατε να χρησιμοποιήσετε τον Τζέιμς Μποντ αντί για τον Μποντ Τζέιμς. Εδώ, μπορείτε να το ορίσετε κατά βούληση.",
     "You can customize the criteria that let you track your mood.": "Μπορείτε να προσαρμόσετε τα κριτήρια που σας επιτρέπουν να παρακολουθείτε τη διάθεσή σας.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Μπορείτε να μετακινήσετε τις επαφές μεταξύ των θυρίδων. Αυτή η αλλαγή είναι άμεση. Μπορείτε να μετακινήσετε επαφές μόνο σε θησαυροφυλάκια στα οποία ανήκετε. Όλα τα δεδομένα επαφών θα μετακινηθούν μαζί του.",
     "You cannot remove your own administrator privilege.": "Δεν μπορείτε να αφαιρέσετε το δικό σας δικαίωμα διαχειριστή.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Θέλατε να σας υπενθυμίσουμε τα εξής:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Θα πρέπει ακόμα να διαγράψετε τον λογαριασμό σας στη Monica ή στο OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Έχετε προσκληθεί να χρησιμοποιήσετε αυτήν τη διεύθυνση ηλεκτρονικού ταχυδρομείου στη Monica, ένα προσωπικό CRM ανοιχτού κώδικα, ώστε να μπορούμε να το χρησιμοποιήσουμε για να σας στέλνουμε ειδοποιήσεις.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Επικίνδυνη ζώνη",
     "🌳 Chalet": "🌳 Σαλέ",
     "🏠 Secondary residence": "🏠 Δευτερεύουσα κατοικία",
