--- a/lang/en.json
+++ b/lang/en.json
@@ -211,7 +211,7 @@
     "Available modules:": "Available modules:",
     "Avatar": "Avatar",
     "Avatars": "Avatars",
-    "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.",
+    "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "Before continuing, could you verify your email address by clicking on the link we just emailed to you? If you didn’t receive the email, we will gladly send you another.",
     "best friend": "best friend",
     "Bird": "Bird",
     "Birthdate": "Birthdate",
@@ -220,7 +220,7 @@
     "boss": "boss",
     "Bought": "Bought",
     "Breakdown of the current usage": "Breakdown of the current usage",
-    "brother\/sister": "brother\/sister",
+    "brother/sister": "brother/sister",
     "Browser Sessions": "Browser Sessions",
     "Buddhist": "Buddhist",
     "Business": "Business",
@@ -364,7 +364,7 @@
     "Delete the photo": "Delete the photo",
     "Delete the slice": "Delete the slice",
     "Delete the vault": "Delete the vault",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Delete your account on https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Delete your account on https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.",
     "Description": "Description",
     "Detail of a goal": "Detail of a goal",
@@ -478,7 +478,7 @@
     "Had a promotion": "Had a promotion",
     "Hamster": "Hamster",
     "Have a great day,": "Have a great day,",
-    "he\/him": "he\/him",
+    "he/him": "he/him",
     "Hello!": "Hello!",
     "Help": "Help",
     "Hi :name": "Hi :name",
@@ -491,7 +491,7 @@
     "How could I have done this day better?": "How could I have done this day better?",
     "How did you feel?": "How did you feel?",
     "How do you feel right now?": "How do you feel right now?",
-    "however, there are many, many new features that didn't exist before.": "however, there are many, many new features that didn't exist before.",
+    "however, there are many, many new features that didn't exist before.": "however, there are many, many new features that didn’t exist before.",
     "How much money was lent?": "How much money was lent?",
     "How much was lent?": "How much was lent?",
     "How often should we remind you about this date?": "How often should we remind you about this date?",
@@ -507,7 +507,7 @@
     "I don’t know the name": "I don’t know the name",
     "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.": "If necessary, you may log out of all of your other browser sessions across all of your devices. Some of your recent sessions are listed below; however, this list may not be exhaustive. If you feel your account has been compromised, you should also update your password.",
     "If the date is in the past, the next occurence of the date will be next year.": "If the date is in the past, the next occurence of the date will be next year.",
-    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:",
+    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:",
     "If you already have an account, you may accept this invitation by clicking the button below:": "If you already have an account, you may accept this invitation by clicking the button below:",
     "If you did not create an account, no further action is required.": "If you did not create an account, no further action is required.",
     "If you did not expect to receive an invitation to this team, you may discard this email.": "If you did not expect to receive an invitation to this team, you may discard this email.",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Name of the reminder",
     "Name of the reverse relationship": "Name of the reverse relationship",
     "Nature of the call": "Nature of the call",
-    "nephew\/niece": "nephew\/niece",
+    "nephew/niece": "nephew/niece",
     "New Password": "New Password",
     "New to Monica?": "New to Monica?",
     "Next": "Next",
@@ -696,7 +696,7 @@
     "Password": "Password",
     "Payment Required": "Payment Required",
     "Pending Team Invitations": "Pending Team Invitations",
-    "per\/per": "per\/per",
+    "per/per": "per/per",
     "Permanently delete this team.": "Permanently delete this team.",
     "Permanently delete your account.": "Permanently delete your account.",
     "Permission for :name": "Permission for :name",
@@ -721,7 +721,7 @@
     "Please confirm access to your account by entering one of your emergency recovery codes.": "Please confirm access to your account by entering one of your emergency recovery codes.",
     "Please confirm access to your account by entering the authentication code provided by your authenticator application.": "Please confirm access to your account by entering the authentication code provided by your authenticator application.",
     "Please confirm access to your account by validating your security key.": "Please confirm access to your account by validating your security key.",
-    "Please copy your new API token. For your security, it won't be shown again.": "Please copy your new API token. For your security, it won't be shown again.",
+    "Please copy your new API token. For your security, it won't be shown again.": "Please copy your new API token. For your security, it won’t be shown again.",
     "Please copy your new API token. For your security, it won’t be shown again.": "Please copy your new API token. For your security, it won’t be shown again.",
     "Please enter at least 3 characters to initiate a search.": "Please enter at least 3 characters to initiate a search.",
     "Please enter your password to cancel the account": "Please enter your password to cancel the account",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Please indicate the contacts",
     "Please join Monica": "Please join Monica",
     "Please provide the email address of the person you would like to add to this team.": "Please provide the email address of the person you would like to add to this team.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.",
     "Please select a page on the left to load modules.": "Please select a page on the left to load modules.",
     "Please type a few characters to create a new label.": "Please type a few characters to create a new label.",
     "Please type a few characters to create a new tag.": "Please type a few characters to create a new tag.",
@@ -835,7 +835,7 @@
     "Setup Key": "Setup Key",
     "Setup Key:": "Setup Key:",
     "Setup Telegram": "Setup Telegram",
-    "she\/her": "she\/her",
+    "she/her": "she/her",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Show Calendar tab",
     "Show Companies tab": "Show Companies tab",
@@ -1052,7 +1052,7 @@
     "The task has been created": "The task has been created",
     "The task has been deleted": "The task has been deleted",
     "The task has been edited": "The task has been edited",
-    "The team's name and owner information.": "The team's name and owner information.",
+    "The team's name and owner information.": "The team’s name and owner information.",
     "The Telegram channel has been deleted": "The Telegram channel has been deleted",
     "The template has been created": "The template has been created",
     "The template has been deleted": "The template has been deleted",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "The vault has been created",
     "The vault has been deleted": "The vault has been deleted",
     "The vault have been updated": "The vault have been updated",
-    "they\/them": "they\/them",
+    "they/them": "they/them",
     "This address is not active anymore": "This address is not active anymore",
     "This device": "This device",
     "This email is a test email to check if Monica can send an email to this email address.": "This email is a test email to check if Monica can send an email to this email address.",
@@ -1094,7 +1094,7 @@
     "Timezone": "Timezone",
     "Title": "Title",
     "to": "to",
-    "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.",
+    "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.",
     "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.",
     "Toggle navigation": "Toggle navigation",
     "To hear their story": "To hear their story",
@@ -1113,7 +1113,7 @@
     "Tuesday": "Tuesday",
     "Two-factor Confirmation": "Two-factor Confirmation",
     "Two Factor Authentication": "Two Factor Authentication",
-    "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.",
+    "Two factor authentication is now enabled. Scan the following QR code using your phone's authenticator application or enter the setup key.": "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.",
     "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.": "Two factor authentication is now enabled. Scan the following QR code using your phone’s authenticator application or enter the setup key.",
     "Type": "Type",
     "Type:": "Type:",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Unarchive contact",
     "unarchived the contact": "unarchived the contact",
     "Unauthorized": "Unauthorized",
-    "uncle\/aunt": "uncle\/aunt",
+    "uncle/aunt": "uncle/aunt",
     "Undefined": "Undefined",
     "Unexpected error on login.": "Unexpected error on login.",
     "Unknown": "Unknown",
@@ -1143,7 +1143,7 @@
     "updated the job information": "updated the job information",
     "updated the religion": "updated the religion",
     "Update Password": "Update Password",
-    "Update your account's profile information and email address.": "Update your account's profile information and email address.",
+    "Update your account's profile information and email address.": "Update your account’s profile information and email address.",
     "Update your account’s profile information and email address.": "Update your account’s profile information and email address.",
     "Upload photo as avatar": "Upload photo as avatar",
     "Use": "Use",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Value copied into your clipboard",
     "Vaults contain all your contacts data.": "Vaults contain all your contacts data.",
     "Vault settings": "Vault settings",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Verification email sent",
     "Verified": "Verified",
     "Verify Email Address": "Verify Email Address",
@@ -1189,7 +1189,7 @@
     "We call them a relation, and its reverse relation. For each relation you define, you need to define its counterpart.": "We call them a relation, and its reverse relation. For each relation you define, you need to define its counterpart.",
     "Wedding": "Wedding",
     "Wednesday": "Wednesday",
-    "We hope you'll like it.": "We hope you'll like it.",
+    "We hope you'll like it.": "We hope you’ll like it.",
     "We hope you will like what we’ve done.": "We hope you will like what we’ve done.",
     "Welcome to Monica.": "Welcome to Monica.",
     "Went to a bar": "Went to a bar",
@@ -1204,7 +1204,7 @@
     "What should we use to display maps?": "What should we use to display maps?",
     "What would make today great?": "What would make today great?",
     "When did the call happened?": "When did the call happened?",
-    "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.",
+    "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone's Google Authenticator application.": "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Google Authenticator application.",
     "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.": "When two factor authentication is enabled, you will be prompted for a secure, random token during authentication. You may retrieve this token from your phone’s Authenticator application.",
     "When was the loan made?": "When was the loan made?",
     "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:": "When you define a relationship between two contacts, for instance a father-son relationship, Monica creates two relations, one for each contact:",
@@ -1220,21 +1220,21 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Write the amount with a dot if you need decimals, like 100.50",
     "Written on": "Written on",
     "wrote a note": "wrote a note",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "year",
     "Years": "Years",
     "You are here:": "You are here:",
     "You are invited to join Monica": "You are invited to join Monica",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
-    "you can't even use your current username or password to sign in,": "you can't even use your current username or password to sign in,",
-    "you can't import any data from your current Monica account(yet),": "you can't import any data from your current Monica account(yet),",
+    "you can't even use your current username or password to sign in,": "you can’t even use your current username or password to sign in,",
+    "you can't import any data from your current Monica account(yet),": "you can’t import any data from your current Monica account(yet),",
     "You can add job information to your contacts and manage the companies here in this tab.": "You can add job information to your contacts and manage the companies here in this tab.",
     "You can add more account to log in to our service with one click.": "You can add more account to log in to our service with one click.",
     "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.": "You can be notified through different channels: emails, a Telegram message, on Facebook. You decide.",
     "You can change that at any time.": "You can change that at any time.",
     "You can choose how you want Monica to display dates in the application.": "You can choose how you want Monica to display dates in the application.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "You can choose which currencies should be enabled in your account, and which one shouldn’t.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.",
     "You can customize the criteria that let you track your mood.": "You can customize the criteria that let you track your mood.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.",
     "You cannot remove your own administrator privilege.": "You cannot remove your own administrator privilege.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "You wanted to be reminded of the following:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "You WILL still have to delete your account on Monica or OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Danger zone",
     "🌳 Chalet": "🌳 Chalet",
     "🏠 Secondary residence": "🏠 Secondary residence",
