--- a/lang/es.json
+++ b/lang/es.json
@@ -220,7 +220,7 @@
     "boss": "jefe",
     "Bought": "Compró",
     "Breakdown of the current usage": "Desglose del uso actual",
-    "brother\/sister": "hermano hermana",
+    "brother/sister": "hermano/hermana",
     "Browser Sessions": "Sesiones del navegador",
     "Buddhist": "Budista",
     "Business": "Negocio",
@@ -364,7 +364,7 @@
     "Delete the photo": "borrar la foto",
     "Delete the slice": "Eliminar el segmento",
     "Delete the vault": "Eliminar la bóveda",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Elimina tu cuenta en https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Elimina tu cuenta en https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Eliminar la bóveda significa eliminar todos los datos dentro de esta bóveda, para siempre. No hay vuelta atrás. Por favor esté seguro.",
     "Description": "Descripción",
     "Detail of a goal": "Detalle de un gol",
@@ -478,7 +478,7 @@
     "Had a promotion": "tuvo una promoción",
     "Hamster": "Hámster",
     "Have a great day,": "Qué tengas un lindo día,",
-    "he\/him": "él\/él",
+    "he/him": "él/él",
     "Hello!": "¡Hola!",
     "Help": "Ayuda",
     "Hi :name": "Hola :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Nombre del recordatorio",
     "Name of the reverse relationship": "Nombre de la relación inversa",
     "Nature of the call": "Naturaleza de la llamada",
-    "nephew\/niece": "sobrino sobrina",
+    "nephew/niece": "sobrino/sobrina",
     "New Password": "Nueva Contraseña",
     "New to Monica?": "¿Nuevo en Monica?",
     "Next": "Próximo",
@@ -696,7 +696,7 @@
     "Password": "Contraseña",
     "Payment Required": "Pago requerido",
     "Pending Team Invitations": "Invitaciones de equipo pendientes",
-    "per\/per": "por\/por",
+    "per/per": "por/por",
     "Permanently delete this team.": "Eliminar este equipo de forma permanente",
     "Permanently delete your account.": "Eliminar su cuenta de forma permanente.",
     "Permission for :name": "Permiso para :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Por favor indique los contactos",
     "Please join Monica": "Por favor únete a Monica",
     "Please provide the email address of the person you would like to add to this team.": "Por favor proporcione la dirección de correo electrónico de la persona que le gustaría agregar a este equipo.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Lea nuestra <link>documentación<\/link> para saber más sobre esta función y a qué variables tiene acceso.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Lea nuestra <link>documentación</link> para saber más sobre esta función y a qué variables tiene acceso.",
     "Please select a page on the left to load modules.": "Seleccione una página a la izquierda para cargar módulos.",
     "Please type a few characters to create a new label.": "Escriba algunos caracteres para crear una nueva etiqueta.",
     "Please type a few characters to create a new tag.": "Escriba algunos caracteres para crear una nueva etiqueta.",
@@ -835,7 +835,7 @@
     "Setup Key": "Clave de configuración",
     "Setup Key:": "Clave de configuración:",
     "Setup Telegram": "Configurar telegrama",
-    "she\/her": "Ella ella",
+    "she/her": "Ella/ella",
     "Shintoist": "sintoísta",
     "Show Calendar tab": "Mostrar pestaña Calendario",
     "Show Companies tab": "Mostrar pestaña Empresas",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "La bóveda ha sido creada.",
     "The vault has been deleted": "La bóveda ha sido eliminada.",
     "The vault have been updated": "La bóveda ha sido actualizada.",
-    "they\/them": "ellos ellos",
+    "they/them": "ellos/ellos",
     "This address is not active anymore": "Esta dirección ya no está activa",
     "This device": "Este dispositivo",
     "This email is a test email to check if Monica can send an email to this email address.": "Este correo electrónico es un correo electrónico de prueba para comprobar si Monica puede enviar un correo electrónico a esta dirección de correo electrónico.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Desarchivar contacto",
     "unarchived the contact": "desarchivado el contacto",
     "Unauthorized": "No autorizado",
-    "uncle\/aunt": "tío tía",
+    "uncle/aunt": "tío/tía",
     "Undefined": "Indefinido",
     "Unexpected error on login.": "Error inesperado al iniciar sesión.",
     "Unknown": "Desconocido",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Valor copiado en su portapapeles",
     "Vaults contain all your contacts data.": "Las bóvedas contienen todos los datos de sus contactos.",
     "Vault settings": "Configuración de la bóveda",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "El mensaje de verificación ha sido enviado",
     "Verified": "Verificado",
     "Verify Email Address": "Confirme su correo electrónico",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Escribe la cantidad con un punto si necesitas decimales, como 100,50",
     "Written on": "Escrito en",
     "wrote a note": "escribió una nota",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "año",
     "Years": "Años",
     "You are here:": "Usted está aquí:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Puedes cambiar eso en cualquier momento.",
     "You can choose how you want Monica to display dates in the application.": "Puedes elegir cómo quieres que Monica muestre las fechas en la aplicación.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Puede elegir qué monedas deben habilitarse en su cuenta y cuáles no.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Puede personalizar cómo se deben mostrar los contactos según su propio gusto\/cultura. Quizás quieras usar James Bond en lugar de Bond James. Aquí puedes definirlo a tu antojo.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Puede personalizar cómo se deben mostrar los contactos según su propio gusto/cultura. Quizás quieras usar James Bond en lugar de Bond James. Aquí puedes definirlo a tu antojo.",
     "You can customize the criteria that let you track your mood.": "Puede personalizar los criterios que le permiten realizar un seguimiento de su estado de ánimo.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Puede mover contactos entre bóvedas. Este cambio es inmediato. Solo puede mover contactos a las bóvedas de las que forma parte. Todos los datos de los contactos se moverán con él.",
     "You cannot remove your own administrator privilege.": "No puede eliminar su propio privilegio de administrador.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Quería que le recordaran lo siguiente:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Aún tendrás que eliminar tu cuenta en Monica u OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Se le ha invitado a utilizar esta dirección de correo electrónico en Monica, un CRM personal de código abierto, para que podamos utilizarla para enviarle notificaciones.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Zona de peligro",
     "🌳 Chalet": "🌳 Chalet",
     "🏠 Secondary residence": "🏠 Residencia secundaria",
