--- a/lang/he.json
+++ b/lang/he.json
@@ -220,7 +220,7 @@
     "boss": "בּוֹס",
     "Bought": "קנה",
     "Breakdown of the current usage": "פירוט השימוש הנוכחי",
-    "brother\/sister": "אח אחות",
+    "brother/sister": "אח/אחות",
     "Browser Sessions": "הפעלות בדפדפן",
     "Buddhist": "בודהיסט",
     "Business": "עֵסֶק",
@@ -364,7 +364,7 @@
     "Delete the photo": "מחק את התמונה",
     "Delete the slice": "מחק את הנתח",
     "Delete the vault": "מחק את הכספת",
-    "Delete your account on https:\/\/customers.monicahq.com.": "מחק את חשבונך ב-https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "מחק את חשבונך ב-https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "מחיקת הכספת פירושה מחיקת כל הנתונים בתוך הכספת הזו, לנצח. אין דרך חזרה. נא להיות בטוחים.",
     "Description": "תיאור",
     "Detail of a goal": "פירוט של מטרה",
@@ -478,7 +478,7 @@
     "Had a promotion": "היה קידום",
     "Hamster": "אוֹגֵר",
     "Have a great day,": "שיהיה לך יום טוב,",
-    "he\/him": "הוא\/הוא",
+    "he/him": "הוא/הוא",
     "Hello!": "שלום!",
     "Help": "עֶזרָה",
     "Hi :name": "היי :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "שם התזכורת",
     "Name of the reverse relationship": "שם הקשר ההפוך",
     "Nature of the call": "אופי השיחה",
-    "nephew\/niece": "אחיין אחיינית",
+    "nephew/niece": "אחיין/אחיינית",
     "New Password": "סיסמה חדשה",
     "New to Monica?": "חדש Monica?",
     "Next": "הַבָּא",
@@ -696,7 +696,7 @@
     "Password": "סיסמה",
     "Payment Required": "נדרש תשלום",
     "Pending Team Invitations": "הזמנות תלויות ועומדות לצוות",
-    "per\/per": "לכל\/לכל",
+    "per/per": "לכל/לכל",
     "Permanently delete this team.": "למחוק לצמיתות את הצוות הזה.",
     "Permanently delete your account.": "מחק את החשבון שלך לצמיתות.",
     "Permission for :name": "הרשאה עבור :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "נא לציין את אנשי הקשר",
     "Please join Monica": "נא להצטרף Monica",
     "Please provide the email address of the person you would like to add to this team.": "אנא ספק את כתובת הדוא \" ל של האדם שברצונך להוסיף לצוות זה.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "אנא קרא את ה<link>תיעוד<\/link> שלנו כדי לדעת יותר על תכונה זו, ולאילו משתנים יש לך גישה.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "אנא קרא את ה<link>תיעוד</link> שלנו כדי לדעת יותר על תכונה זו, ולאילו משתנים יש לך גישה.",
     "Please select a page on the left to load modules.": "אנא בחר עמוד בצד שמאל כדי לטעון מודולים.",
     "Please type a few characters to create a new label.": "אנא הקלד כמה תווים כדי ליצור תווית חדשה.",
     "Please type a few characters to create a new tag.": "אנא הקלד כמה תווים כדי ליצור תג חדש.",
@@ -835,7 +835,7 @@
     "Setup Key": "מפתח הגדרה",
     "Setup Key:": "מפתח הגדרה:",
     "Setup Telegram": "הגדרת טלגרם",
-    "she\/her": "היא היא",
+    "she/her": "היא/היא",
     "Shintoist": "שינטואיסט",
     "Show Calendar tab": "הצג את הכרטיסייה לוח שנה",
     "Show Companies tab": "הצג את הכרטיסייה חברות",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "הכספת נוצרה",
     "The vault has been deleted": "הכספת נמחקה",
     "The vault have been updated": "הכספת עודכנה",
-    "they\/them": "הם\/הם",
+    "they/them": "הם/הם",
     "This address is not active anymore": "כתובת זו אינה פעילה יותר",
     "This device": "התקן זה",
     "This email is a test email to check if Monica can send an email to this email address.": "דוא\"ל זה הוא דוא\"ל בדיקה כדי לבדוק אם Monica יכולה לשלוח דוא\"ל לכתובת דוא\"ל זו.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "בטל מארכיון איש קשר",
     "unarchived the contact": "הוציא את איש הקשר מהארכיון",
     "Unauthorized": "לא מורשה",
-    "uncle\/aunt": "דוד דודה",
+    "uncle/aunt": "דוד/דודה",
     "Undefined": "לא מוגדר",
     "Unexpected error on login.": "שגיאה בלתי צפויה בכניסה.",
     "Unknown": "לא ידוע",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "הערך הועתק ללוח שלך",
     "Vaults contain all your contacts data.": "כספות מכילות את כל נתוני אנשי הקשר שלך.",
     "Vault settings": "הגדרות הכספת",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "דוא\"ל אימות נשלח",
     "Verified": "מְאוּמָת",
     "Verify Email Address": "אימות דואר אלקטרוני",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "כתוב את הסכום עם נקודה אם אתה צריך עשרוניות, כמו 100.50",
     "Written on": "כתוב על",
     "wrote a note": "כתב פתק",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "שָׁנָה",
     "Years": "שנים",
     "You are here:": "אתה כאן:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "אתה יכול לשנות את זה בכל עת.",
     "You can choose how you want Monica to display dates in the application.": "אתה יכול לבחור איך אתה רוצה שMonica תציג תאריכים באפליקציה.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "אתה יכול לבחור אילו מטבעות יש להפעיל בחשבונך, ואיזה לא.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "אתה יכול להתאים אישית את אופן הצגת אנשי הקשר לפי הטעם\/תרבות שלך. אולי תרצה להשתמש בג’יימס בונד במקום בונד ג’יימס. כאן, אתה יכול להגדיר את זה כרצונך.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "אתה יכול להתאים אישית את אופן הצגת אנשי הקשר לפי הטעם/תרבות שלך. אולי תרצה להשתמש בג’יימס בונד במקום בונד ג’יימס. כאן, אתה יכול להגדיר את זה כרצונך.",
     "You can customize the criteria that let you track your mood.": "אתה יכול להתאים אישית את הקריטריונים שיאפשרו לך לעקוב אחר מצב הרוח שלך.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "אתה יכול להעביר אנשי קשר בין כספות. השינוי הזה הוא מיידי. אתה יכול להעביר אנשי קשר רק לכספות שאתה חלק מהן. כל נתוני אנשי הקשר יעברו איתו.",
     "You cannot remove your own administrator privilege.": "אינך יכול להסיר את הרשאת המנהל שלך.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "רצית להיזכר בדברים הבאים:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "עדיין תצטרך למחוק את חשבונך ב- Monica או OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "הוזמנת להשתמש בכתובת האימייל הזו ב- Monica, קוד פתוח ב-CRM אישי, כדי שנוכל להשתמש בה כדי לשלוח לך התראות.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ אזור סכנה",
     "🌳 Chalet": "🌳 בקתה",
     "🏠 Secondary residence": "🏠 מגורים משני",
