--- a/lang/hi.json
+++ b/lang/hi.json
@@ -220,7 +220,7 @@
     "boss": "मालिक",
     "Bought": "खरीदा",
     "Breakdown of the current usage": "वर्तमान उपयोग का विवरण",
-    "brother\/sister": "भाई बहन",
+    "brother/sister": "भाई/बहन",
     "Browser Sessions": "ब्राउज़र सत्र",
     "Buddhist": "बौद्ध",
     "Business": "व्यापार",
@@ -364,7 +364,7 @@
     "Delete the photo": "फ़ोटो हटाएँ",
     "Delete the slice": "टुकड़ा हटाएँ",
     "Delete the vault": "तिजोरी हटाओ",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com पर अपना खाता हटाएं।",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com पर अपना खाता हटाएं।",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "वॉल्ट को हटाने का अर्थ है इस वॉल्ट के अंदर मौजूद सभी डेटा को हमेशा के लिए हटाना। यहां वापसी का कोई मोड़ नहीं। कृपया निश्चिंत रहें.",
     "Description": "विवरण",
     "Detail of a goal": "एक लक्ष्य का विवरण",
@@ -478,7 +478,7 @@
     "Had a promotion": "प्रमोशन हुआ",
     "Hamster": "हम्सटर",
     "Have a great day,": "आपका दिन अच्छा रहे,",
-    "he\/him": "वह उसे",
+    "he/him": "वह/उसे",
     "Hello!": "नमस्कार!",
     "Help": "मदद",
     "Hi :name": "नमस्ते :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "अनुस्मारक का नाम",
     "Name of the reverse relationship": "विपरीत संबंध का नाम",
     "Nature of the call": "कॉल की प्रकृति",
-    "nephew\/niece": "भतीजे भतीजी",
+    "nephew/niece": "भतीजे/भतीजी",
     "New Password": "नया पासवर्ड",
     "New to Monica?": "Monica के लिए नया?",
     "Next": "अगला",
@@ -696,7 +696,7 @@
     "Password": "पासवर्ड",
     "Payment Required": "भुगतान की आवश्यकता है",
     "Pending Team Invitations": "लंबित टीम निमंत्रण",
-    "per\/per": "प्रति\/प्रति",
+    "per/per": "प्रति/प्रति",
     "Permanently delete this team.": "इस टीम को स्थायी रूप से हटा दें ।",
     "Permanently delete your account.": "अपने खाते को स्थायी रूप से हटा दें ।",
     "Permission for :name": ":name के लिए अनुमति",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "कृपया संपर्क बताएं",
     "Please join Monica": "कृपया Monica से जुड़ें",
     "Please provide the email address of the person you would like to add to this team.": "कृपया उस व्यक्ति का ईमेल पता प्रदान करें जिसे आप इस टीम में जोड़ना चाहते हैं ।",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "इस सुविधा के बारे में और आपके पास किन वेरिएबल्स तक पहुंच है, इसके बारे में अधिक जानने के लिए कृपया हमारा <लिंक>दस्तावेज़ीकरण<\/लिंक> पढ़ें।",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "इस सुविधा के बारे में और आपके पास किन वेरिएबल्स तक पहुंच है, इसके बारे में अधिक जानने के लिए कृपया हमारा <लिंक>दस्तावेज़ीकरण</लिंक> पढ़ें।",
     "Please select a page on the left to load modules.": "कृपया मॉड्यूल लोड करने के लिए बाईं ओर एक पृष्ठ चुनें।",
     "Please type a few characters to create a new label.": "नया लेबल बनाने के लिए कृपया कुछ अक्षर टाइप करें।",
     "Please type a few characters to create a new tag.": "नया टैग बनाने के लिए कृपया कुछ अक्षर टाइप करें।",
@@ -835,7 +835,7 @@
     "Setup Key": "सेटअप कुंजी",
     "Setup Key:": "सेटअप कुंजी:",
     "Setup Telegram": "टेलीग्राम सेटअप करें",
-    "she\/her": "वह\/उसकी",
+    "she/her": "वह/उसकी",
     "Shintoist": "शिंटोइस्ट",
     "Show Calendar tab": "कैलेंडर टैब दिखाएँ",
     "Show Companies tab": "कंपनी टैब दिखाएँ",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "तिजोरी बनाई गई है",
     "The vault has been deleted": "तिजोरी हटा दी गई है",
     "The vault have been updated": "तिजोरी को अद्यतन किया गया है",
-    "they\/them": "वे उन्हें",
+    "they/them": "वे/उन्हें",
     "This address is not active anymore": "यह पता अब सक्रिय नहीं है",
     "This device": "यह डिवाइस",
     "This email is a test email to check if Monica can send an email to this email address.": "यह ईमेल यह जांचने के लिए एक परीक्षण ईमेल है कि Monica इस ईमेल पते पर ईमेल भेज सकती है या नहीं।",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "संपर्क को असंग्रहीत करें",
     "unarchived the contact": "संपर्क को अनारक्षित करें",
     "Unauthorized": "अनधिकृत",
-    "uncle\/aunt": "चाचा चाची",
+    "uncle/aunt": "चाचा/चाची",
     "Undefined": "अपरिभाषित",
     "Unexpected error on login.": "लॉगिन पर अप्रत्याशित त्रुटि.",
     "Unknown": "अनजान",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "मान आपके क्लिपबोर्ड में कॉपी किया गया",
     "Vaults contain all your contacts data.": "वॉल्ट में आपके सभी संपर्क डेटा होते हैं।",
     "Vault settings": "वॉल्ट सेटिंग्स",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "सत्यापन विद्युतडाक भेज दिया गया है",
     "Verified": "सत्यापित",
     "Verify Email Address": "ईमेल पता सत्यापित करें",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "यदि आपको दशमलव की आवश्यकता है, जैसे 100.50, तो राशि को एक बिंदु के साथ लिखें",
     "Written on": "पर लिखा",
     "wrote a note": "एक नोट लिखा",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "वर्ष",
     "Years": "साल",
     "You are here:": "आप यहां हैं:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "आप इसे किसी भी समय बदल सकते हैं.",
     "You can choose how you want Monica to display dates in the application.": "आप चुन सकते हैं कि आप Monica को आवेदन में तारीखें कैसे प्रदर्शित कराना चाहते हैं।",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "आप चुन सकते हैं कि आपके खाते में कौन सी मुद्राएँ सक्षम होनी चाहिए और कौन सी नहीं।",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "आप अपने स्वाद\/संस्कृति के अनुसार संपर्कों को प्रदर्शित करने के तरीके को अनुकूलित कर सकते हैं। शायद आप बॉन्ड जेम्स के स्थान पर जेम्स बॉन्ड का उपयोग करना चाहेंगे। यहां, आप इसे अपनी इच्छानुसार परिभाषित कर सकते हैं।",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "आप अपने स्वाद/संस्कृति के अनुसार संपर्कों को प्रदर्शित करने के तरीके को अनुकूलित कर सकते हैं। शायद आप बॉन्ड जेम्स के स्थान पर जेम्स बॉन्ड का उपयोग करना चाहेंगे। यहां, आप इसे अपनी इच्छानुसार परिभाषित कर सकते हैं।",
     "You can customize the criteria that let you track your mood.": "आप उन मानदंडों को अनुकूलित कर सकते हैं जो आपको अपने मूड को ट्रैक करने देते हैं।",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "आप संपर्कों को वॉल्ट के बीच स्थानांतरित कर सकते हैं. यह परिवर्तन तत्काल है. आप संपर्कों को केवल उन वॉल्टों में ले जा सकते हैं जिनका आप हिस्सा हैं। सभी संपर्क डेटा इसके साथ चले जाएंगे।",
     "You cannot remove your own administrator privilege.": "आप अपना स्वयं का व्यवस्थापक विशेषाधिकार नहीं हटा सकते.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "आप निम्नलिखित की याद दिलाना चाहते थे:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "आपको अभी भी Monica या ऑफिसलाइफ पर अपना खाता हटाना होगा।",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "आपको Monica में इस ईमेल पते का उपयोग करने के लिए आमंत्रित किया गया है, जो एक खुला स्रोत व्यक्तिगत सीआरएम है, इसलिए हम आपको सूचनाएं भेजने के लिए इसका उपयोग कर सकते हैं।",
-    "ze\/hir": "ze\/हिर",
+    "ze/hir": "ze/हिर",
     "⚠️ Danger zone": "⚠️खतरे का क्षेत्र",
     "🌳 Chalet": "🌳 शैले",
     "🏠 Secondary residence": "🏠द्वितीय निवास",
