--- a/lang/ja.json
+++ b/lang/ja.json
@@ -220,7 +220,7 @@
     "boss": "ボス",
     "Bought": "買った",
     "Breakdown of the current usage": "現在の使用量の内訳",
-    "brother\/sister": "兄弟姉妹",
+    "brother/sister": "兄弟姉妹",
     "Browser Sessions": "ブラウザセッション",
     "Buddhist": "仏教徒",
     "Business": "仕事",
@@ -364,7 +364,7 @@
     "Delete the photo": "写真を削除する",
     "Delete the slice": "スライスを削除する",
     "Delete the vault": "ボールトを削除する",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com でアカウントを削除します。",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com でアカウントを削除します。",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "ボールトを削除すると、このボールト内のすべてのデータが永久に削除されます。もう後戻りはできません。必ずご確認ください。",
     "Description": "説明",
     "Detail of a goal": "目標の詳細",
@@ -478,7 +478,7 @@
     "Had a promotion": "昇進がありました",
     "Hamster": "ハムスター",
     "Have a great day,": "すてきな一日を、",
-    "he\/him": "彼\/彼",
+    "he/him": "彼/彼",
     "Hello!": "こんにちは",
     "Help": "ヘルプ",
     "Hi :name": "こんにちは:name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "リマインダーの名前",
     "Name of the reverse relationship": "逆関係の名前",
     "Nature of the call": "通話の性質",
-    "nephew\/niece": "甥\/姪",
+    "nephew/niece": "甥/姪",
     "New Password": "新しいパスワード",
     "New to Monica?": "Monica は初めてですか?",
     "Next": "次",
@@ -696,7 +696,7 @@
     "Password": "パスワード",
     "Payment Required": "お支払いが必要",
     "Pending Team Invitations": "保留中のチーム招待",
-    "per\/per": "あたり\/あたり",
+    "per/per": "あたり/あたり",
     "Permanently delete this team.": "永久にチームを削除する。",
     "Permanently delete your account.": "永久にアカウントを削除する。",
     "Permission for :name": ":nameの許可",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "連絡先を明記してください",
     "Please join Monica": "Monicaさんも参加してください",
     "Please provide the email address of the person you would like to add to this team.": "このチームに追加したい人のメールアドレスを入力してください。",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "この機能とアクセスできる変数の詳細については、<link>ドキュメント<\/link>をお読みください。",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "この機能とアクセスできる変数の詳細については、<link>ドキュメント</link>をお読みください。",
     "Please select a page on the left to load modules.": "左側のページを選択してモジュールをロードしてください。",
     "Please type a few characters to create a new label.": "新しいラベルを作成するには、いくつかの文字を入力してください。",
     "Please type a few characters to create a new tag.": "新しいタグを作成するには、いくつかの文字を入力してください。",
@@ -835,7 +835,7 @@
     "Setup Key": "キー設定",
     "Setup Key:": "セットアップキー:",
     "Setup Telegram": "テレグラムのセットアップ",
-    "she\/her": "彼女",
+    "she/her": "彼女",
     "Shintoist": "神道家",
     "Show Calendar tab": "「カレンダー」タブを表示",
     "Show Companies tab": "「会社」タブを表示",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "金庫が作成されました",
     "The vault has been deleted": "保管庫が削除されました",
     "The vault have been updated": "保管庫が更新されました",
-    "they\/them": "彼ら\/彼ら",
+    "they/them": "彼ら/彼ら",
     "This address is not active anymore": "このアドレスはもうアクティブではありません",
     "This device": "この端末",
     "This email is a test email to check if Monica can send an email to this email address.": "このメールは、Monica がこのメール アドレスにメールを送信できるかどうかを確認するためのテスト メールです。",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "連絡先のアーカイブを解除する",
     "unarchived the contact": "連絡先をアーカイブ解除しました",
     "Unauthorized": "認証が必要です",
-    "uncle\/aunt": "おじさんおばさん",
+    "uncle/aunt": "おじさんおばさん",
     "Undefined": "未定義",
     "Unexpected error on login.": "ログイン時に予期しないエラーが発生しました。",
     "Unknown": "不明",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "クリップボードにコピーされた値",
     "Vaults contain all your contacts data.": "ボールトにはすべての連絡先データが含まれています。",
     "Vault settings": "ボールトの設定",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "確認メールが送信されました",
     "Verified": "確認済み",
     "Verify Email Address": "メールアドレスの確認",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "小数点が必要な場合は、100.50 のように金額をドットで書きます。",
     "Written on": "に書かれています",
     "wrote a note": "メモを書きました",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "年",
     "Years": "年",
     "You are here:": "あなたはここにいる：",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "それはいつでも変更できます。",
     "You can choose how you want Monica to display dates in the application.": "Monica がアプリケーションで日付を表示する方法を選択できます。",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "アカウントでどの通貨を有効にするか、どの通貨を無効にするかを選択できます。",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "自分の好みや文化に応じて連絡先の表示方法をカスタマイズできます。おそらく、ボンド・ジェームズの代わりにジェームズ・ボンドを使いたいと思うかもしれません。ここでは、任意に定義できます。",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "自分の好みや文化に応じて連絡先の表示方法をカスタマイズできます。おそらく、ボンド・ジェームズの代わりにジェームズ・ボンドを使いたいと思うかもしれません。ここでは、任意に定義できます。",
     "You can customize the criteria that let you track your mood.": "気分を追跡する基準をカスタマイズできます。",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "連絡先をボールト間で移動できます。この変更は即座に反映されます。連絡先は、自分が属しているボールトにのみ移動できます。すべての連絡先データも一緒に移動されます。",
     "You cannot remove your own administrator privilege.": "自分自身の管理者権限を削除することはできません。",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "次のことを思い出してもらいたいと考えていました。",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Monica または OfficeLife のアカウントを削除する必要があります。",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "このメール アドレスをオープンソースのパーソナル CRM である Monica で使用するように招待されているため、通知を送信するために使用できます。",
-    "ze\/hir": "ぜ\/ひる",
+    "ze/hir": "ぜ/ひる",
     "⚠️ Danger zone": "⚠️危険地帯",
     "🌳 Chalet": "🌳 シャレー",
     "🏠 Secondary residence": "🏠 二次住居",
