--- a/lang/ml.json
+++ b/lang/ml.json
@@ -220,7 +220,7 @@
     "boss": "മുതലാളി",
     "Bought": "വാങ്ങി",
     "Breakdown of the current usage": "നിലവിലെ ഉപയോഗത്തിന്റെ വിഭജനം",
-    "brother\/sister": "സഹോദരൻ സഹോദരി",
+    "brother/sister": "സഹോദരൻ/സഹോദരി",
     "Browser Sessions": "ബ്രൗസർ സെഷനുകൾ",
     "Buddhist": "ബുദ്ധമതം",
     "Business": "ബിസിനസ്സ്",
@@ -364,7 +364,7 @@
     "Delete the photo": "ഫോട്ടോ ഇല്ലാതാക്കുക",
     "Delete the slice": "സ്ലൈസ് ഇല്ലാതാക്കുക",
     "Delete the vault": "നിലവറ ഇല്ലാതാക്കുക",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com എന്നതിൽ നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കുക.",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com എന്നതിൽ നിങ്ങളുടെ അക്കൗണ്ട് ഇല്ലാതാക്കുക.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "നിലവറ ഇല്ലാതാക്കുക എന്നതിനർത്ഥം ഈ നിലവറയ്ക്കുള്ളിലെ എല്ലാ ഡാറ്റയും എന്നെന്നേക്കുമായി ഇല്ലാതാക്കുക എന്നാണ്. തിരിഞ്ഞു നോക്കാനില്ല. ദയവായി ഉറപ്പിച്ചിരിക്കുക.",
     "Description": "വിവരണം",
     "Detail of a goal": "ഒരു ഗോളിന്റെ വിശദാംശങ്ങൾ",
@@ -479,7 +479,7 @@
     "Had a promotion": "ഒരു പ്രമോഷൻ ഉണ്ടായിരുന്നു",
     "Hamster": "ഹാംസ്റ്റർ",
     "Have a great day,": "നല്ലൊരു ദിനം ആശംസിക്കുന്നു,",
-    "he\/him": "അവൻ\/അവൻ",
+    "he/him": "അവൻ/അവൻ",
     "Hello!": "ഹലോ!",
     "Help": "സഹായം",
     "Hi :name": "ഹായ് :name",
@@ -639,7 +639,7 @@
     "Name of the reminder": "ഓർമ്മപ്പെടുത്തലിന്റെ പേര്",
     "Name of the reverse relationship": "വിപരീത ബന്ധത്തിന്റെ പേര്",
     "Nature of the call": "കോളിന്റെ സ്വഭാവം",
-    "nephew\/niece": "അനന്തരവന് അനന്തരവള്",
+    "nephew/niece": "അനന്തരവന്/അനന്തരവള്",
     "New Password": "പുതിയ പാസ്വേഡ്",
     "New to Monica?": "Monicaയിൽ പുതിയത്?",
     "Next": "അടുത്തത്",
@@ -697,7 +697,7 @@
     "Password": "Password",
     "Payment Required": "പേയ്മെന്റ് ആവശ്യമാണ്",
     "Pending Team Invitations": "തീർച്ചപ്പെടുത്താത്ത ടീം ക്ഷണങ്ങൾ",
-    "per\/per": "ഓരോ \/ ഓരോ",
+    "per/per": "ഓരോ / ഓരോ",
     "Permanently delete this team.": "ഈ ടീമിനെ ശാശ്വതമായി ഇല്ലാതാക്കുക.",
     "Permanently delete your account.": "നിങ്ങളുടെ അക്കൗണ്ട് ശാശ്വതമായി ഇല്ലാതാക്കുക.",
     "Permission for :name": ":name എന്നതിനുള്ള അനുമതി",
@@ -730,7 +730,7 @@
     "Please indicate the contacts": "ദയവായി കോൺടാക്റ്റുകൾ സൂചിപ്പിക്കുക",
     "Please join Monica": "Monicaയിൽ ചേരൂ",
     "Please provide the email address of the person you would like to add to this team.": "ഈ ടീമിലേക്ക് നിങ്ങൾ ചേർക്കാൻ ആഗ്രഹിക്കുന്ന വ്യക്തിയുടെ ഇമെയിൽ വിലാസം ദയവായി നൽകുക.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "ഈ സവിശേഷതയെക്കുറിച്ചും നിങ്ങൾക്ക് ആക്‌സസ് ഉള്ള വേരിയബിളുകളെക്കുറിച്ചും കൂടുതലറിയാൻ ഞങ്ങളുടെ <link>ഡോക്യുമെന്റേഷൻ<\/link> വായിക്കുക.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "ഈ സവിശേഷതയെക്കുറിച്ചും നിങ്ങൾക്ക് ആക്‌സസ് ഉള്ള വേരിയബിളുകളെക്കുറിച്ചും കൂടുതലറിയാൻ ഞങ്ങളുടെ <link>ഡോക്യുമെന്റേഷൻ</link> വായിക്കുക.",
     "Please select a page on the left to load modules.": "മൊഡ്യൂളുകൾ ലോഡുചെയ്യാൻ ഇടതുവശത്തുള്ള ഒരു പേജ് തിരഞ്ഞെടുക്കുക.",
     "Please type a few characters to create a new label.": "ഒരു പുതിയ ലേബൽ സൃഷ്ടിക്കാൻ ദയവായി കുറച്ച് പ്രതീകങ്ങൾ ടൈപ്പ് ചെയ്യുക.",
     "Please type a few characters to create a new tag.": "ഒരു പുതിയ ടാഗ് സൃഷ്ടിക്കാൻ ദയവായി കുറച്ച് പ്രതീകങ്ങൾ ടൈപ്പ് ചെയ്യുക.",
@@ -836,7 +836,7 @@
     "Setup Key": "സജ്ജീകരണ കീ",
     "Setup Key:": "സജ്ജീകരണ കീ:",
     "Setup Telegram": "ടെലിഗ്രാം സജ്ജീകരിക്കുക",
-    "she\/her": "അവൾ\/അവൾ",
+    "she/her": "അവൾ/അവൾ",
     "Shintoist": "ഷിന്റോയിസ്റ്റ്",
     "Show Calendar tab": "കലണ്ടർ ടാബ് കാണിക്കുക",
     "Show Companies tab": "കമ്പനികളുടെ ടാബ് കാണിക്കുക",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "നിലവറ സൃഷ്ടിച്ചു",
     "The vault has been deleted": "നിലവറ ഇല്ലാതാക്കി",
     "The vault have been updated": "നിലവറ നവീകരിച്ചു",
-    "they\/them": "അവർ\/അവരെ",
+    "they/them": "അവർ/അവരെ",
     "This address is not active anymore": "ഈ വിലാസം ഇപ്പോൾ സജീവമല്ല",
     "This device": "ഈ ഉപകരണം",
     "This email is a test email to check if Monica can send an email to this email address.": "Monicaയ്ക്ക് ഈ ഇമെയിൽ വിലാസത്തിലേക്ക് ഒരു ഇമെയിൽ അയയ്ക്കാൻ കഴിയുമോ എന്ന് പരിശോധിക്കാനുള്ള ഒരു ടെസ്റ്റ് ഇമെയിൽ ആണ് ഈ ഇമെയിൽ.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "കോൺടാക്റ്റ് അൺആർക്കൈവ് ചെയ്യുക",
     "unarchived the contact": "കോൺടാക്‌റ്റ് ആർക്കൈവ് ചെയ്‌തത് മാറ്റി",
     "Unauthorized": "അനധികൃതം",
-    "uncle\/aunt": "അമ്മാവൻ അമ്മായി",
+    "uncle/aunt": "അമ്മാവൻ/അമ്മായി",
     "Undefined": "നിർവചിക്കാത്തത്",
     "Unexpected error on login.": "ലോഗിൻ ചെയ്യുമ്പോൾ അപ്രതീക്ഷിത പിശക്.",
     "Unknown": "അജ്ഞാതം",
@@ -1161,7 +1161,7 @@
     "Value copied into your clipboard": "നിങ്ങളുടെ ക്ലിപ്പ്ബോർഡിലേക്ക് മൂല്യം പകർത്തി",
     "Vaults contain all your contacts data.": "നിലവറകളിൽ നിങ്ങളുടെ എല്ലാ കോൺടാക്റ്റ് ഡാറ്റയും അടങ്ങിയിരിക്കുന്നു.",
     "Vault settings": "നിലവറ ക്രമീകരണങ്ങൾ",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "സ്ഥിരീകരണ ഇമെയിൽ അയച്ചു",
     "Verified": "പരിശോധിച്ചുറപ്പിച്ചു",
     "Verify Email Address": "ഇമെയിൽ വിലാസം പരിശോധിക്കുക",
@@ -1221,7 +1221,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "നിങ്ങൾക്ക് 100.50 പോലെ ദശാംശങ്ങൾ വേണമെങ്കിൽ ഒരു ഡോട്ട് ഉപയോഗിച്ച് തുക എഴുതുക",
     "Written on": "എഴുതിയത്",
     "wrote a note": "ഒരു കുറിപ്പെഴുതി",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "വർഷം",
     "Years": "വർഷങ്ങൾ",
     "You are here:": "നീ ഇവിടെയാണ്:",
@@ -1235,7 +1235,7 @@
     "You can change that at any time.": "നിങ്ങൾക്ക് അത് എപ്പോൾ വേണമെങ്കിലും മാറ്റാം.",
     "You can choose how you want Monica to display dates in the application.": "ആപ്ലിക്കേഷനിൽ Monica എങ്ങനെ തീയതികൾ പ്രദർശിപ്പിക്കണമെന്ന് നിങ്ങൾക്ക് തിരഞ്ഞെടുക്കാം.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "നിങ്ങളുടെ അക്കൗണ്ടിൽ ഏതൊക്കെ കറൻസികൾ പ്രവർത്തനക്ഷമമാക്കണം, ഏതൊക്കെ ചെയ്യരുത് എന്ന് നിങ്ങൾക്ക് തിരഞ്ഞെടുക്കാം.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "നിങ്ങളുടെ സ്വന്തം അഭിരുചിക്കനുസരിച്ച്\/സംസ്കാരത്തിനനുസരിച്ച് കോൺടാക്റ്റുകൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് നിങ്ങൾക്ക് ഇഷ്ടാനുസൃതമാക്കാം. ബോണ്ട് ജെയിംസിന് പകരം ജെയിംസ് ബോണ്ട് ഉപയോഗിക്കാൻ നിങ്ങൾ ആഗ്രഹിച്ചേക്കാം. ഇവിടെ, നിങ്ങൾക്ക് അത് ഇഷ്ടാനുസരണം നിർവചിക്കാം.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "നിങ്ങളുടെ സ്വന്തം അഭിരുചിക്കനുസരിച്ച്/സംസ്കാരത്തിനനുസരിച്ച് കോൺടാക്റ്റുകൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് നിങ്ങൾക്ക് ഇഷ്ടാനുസൃതമാക്കാം. ബോണ്ട് ജെയിംസിന് പകരം ജെയിംസ് ബോണ്ട് ഉപയോഗിക്കാൻ നിങ്ങൾ ആഗ്രഹിച്ചേക്കാം. ഇവിടെ, നിങ്ങൾക്ക് അത് ഇഷ്ടാനുസരണം നിർവചിക്കാം.",
     "You can customize the criteria that let you track your mood.": "നിങ്ങളുടെ മാനസികാവസ്ഥ ട്രാക്കുചെയ്യാൻ അനുവദിക്കുന്ന മാനദണ്ഡങ്ങൾ നിങ്ങൾക്ക് ഇഷ്ടാനുസൃതമാക്കാനാകും.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "നിങ്ങൾക്ക് നിലവറകൾക്കിടയിൽ കോൺടാക്റ്റുകൾ നീക്കാൻ കഴിയും. ഈ മാറ്റം പെട്ടെന്നുള്ളതാണ്. നിങ്ങൾ ഭാഗമായ നിലവറകളിലേക്ക് മാത്രമേ നിങ്ങൾക്ക് കോൺടാക്റ്റുകൾ നീക്കാൻ കഴിയൂ. എല്ലാ കോൺടാക്റ്റ് ഡാറ്റയും അതിനൊപ്പം നീങ്ങും.",
     "You cannot remove your own administrator privilege.": "നിങ്ങൾക്ക് നിങ്ങളുടെ സ്വന്തം അഡ്മിനിസ്ട്രേറ്റർ പ്രത്യേകാവകാശം നീക്കം ചെയ്യാൻ കഴിയില്ല.",
@@ -1269,7 +1269,7 @@
     "You wanted to be reminded of the following:": "ഇനിപ്പറയുന്നവ നിങ്ങളെ ഓർമ്മിപ്പിക്കാൻ ആഗ്രഹിക്കുന്നു:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Monicaയിലോ ഓഫീസ് ലൈഫിലോ ഉള്ള നിങ്ങളുടെ അക്കൗണ്ട് നിങ്ങൾക്ക് ഇപ്പോഴും ഇല്ലാതാക്കേണ്ടി വരും.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "ഓപ്പൺ സോഴ്‌സ് വ്യക്തിഗത CRM ആയ Monicaയിൽ ഈ ഇമെയിൽ വിലാസം ഉപയോഗിക്കാൻ നിങ്ങളെ ക്ഷണിച്ചിരിക്കുന്നു, അതിനാൽ നിങ്ങൾക്ക് അറിയിപ്പുകൾ അയയ്‌ക്കാൻ ഞങ്ങൾക്ക് ഇത് ഉപയോഗിക്കാം.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ അപകട മേഖല",
     "🌳 Chalet": "🌳 ചാലറ്റ്",
     "🏠 Secondary residence": "🏠 സെക്കൻഡറി വസതി",
