--- a/lang/nl.json
+++ b/lang/nl.json
@@ -220,7 +220,7 @@
     "boss": "baas",
     "Bought": "Gekocht",
     "Breakdown of the current usage": "Uitsplitsing van het huidige gebruik",
-    "brother\/sister": "broer zus",
+    "brother/sister": "broer/zus",
     "Browser Sessions": "Browsersessies",
     "Buddhist": "Boeddhistisch",
     "Business": "Bedrijf",
@@ -364,7 +364,7 @@
     "Delete the photo": "Verwijder de foto",
     "Delete the slice": "Verwijder het segment",
     "Delete the vault": "Verwijder de kluis",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Verwijder uw account op https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Verwijder uw account op https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Het verwijderen van de kluis betekent dat alle gegevens in deze kluis voor altijd worden verwijderd. Er is geen weg terug. Wees alsjeblieft zeker.",
     "Description": "Beschrijving",
     "Detail of a goal": "Detail van een doelpunt",
@@ -478,7 +478,7 @@
     "Had a promotion": "Promotie gehad",
     "Hamster": "Hamster",
     "Have a great day,": "Een fijne dag verder,",
-    "he\/him": "hij\/hem",
+    "he/him": "hij/hem",
     "Hello!": "Hallo!",
     "Help": "Hulp",
     "Hi :name": "Hallo :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Naam van de herinnering",
     "Name of the reverse relationship": "Naam van de omgekeerde relatie",
     "Nature of the call": "Aard van de oproep",
-    "nephew\/niece": "neef nicht",
+    "nephew/niece": "neef/nicht",
     "New Password": "Nieuw wachtwoord",
     "New to Monica?": "Nieuw bij Monica?",
     "Next": "Volgende",
@@ -696,7 +696,7 @@
     "Password": "Wachtwoord",
     "Payment Required": "Betaling Vereist",
     "Pending Team Invitations": "Openstaande Team uitnodigingen",
-    "per\/per": "per\/per",
+    "per/per": "per/per",
     "Permanently delete this team.": "Verwijder dit team definitief.",
     "Permanently delete your account.": "Verwijder je account permanent.",
     "Permission for :name": "Toestemming voor :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Geef de contactpersonen aan",
     "Please join Monica": "Sluit je alsjeblieft aan bij Monica",
     "Please provide the email address of the person you would like to add to this team.": "Geef het e-mailadres op van de persoon die je aan dit team wilt toevoegen.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Lees onze <link>documentatie<\/link> voor meer informatie over deze functie en tot welke variabelen u toegang heeft.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Lees onze <link>documentatie</link> voor meer informatie over deze functie en tot welke variabelen u toegang heeft.",
     "Please select a page on the left to load modules.": "Selecteer een pagina aan de linkerkant om modules te laden.",
     "Please type a few characters to create a new label.": "Typ een paar tekens om een nieuw label te maken.",
     "Please type a few characters to create a new tag.": "Typ een paar tekens om een nieuwe tag te maken.",
@@ -835,7 +835,7 @@
     "Setup Key": "Setup Sleutel",
     "Setup Key:": "Installatiesleutel:",
     "Setup Telegram": "Telegram instellen",
-    "she\/her": "zij\/haar",
+    "she/her": "zij/haar",
     "Shintoist": "Shintoïst",
     "Show Calendar tab": "Tabblad Agenda tonen",
     "Show Companies tab": "Tabblad Bedrijven weergeven",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "De kluis is gemaakt",
     "The vault has been deleted": "De kluis is verwijderd",
     "The vault have been updated": "De kluis is bijgewerkt",
-    "they\/them": "zij\/hen",
+    "they/them": "zij/hen",
     "This address is not active anymore": "Dit adres is niet meer actief",
     "This device": "Dit apparaat",
     "This email is a test email to check if Monica can send an email to this email address.": "Deze e-mail is een test-e-mail om te controleren of Monica een e-mail naar dit e-mailadres kan sturen.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Contact uit het archief halen",
     "unarchived the contact": "heb het contact uit het archief gehaald",
     "Unauthorized": "Onbevoegd",
-    "uncle\/aunt": "oom tante",
+    "uncle/aunt": "oom/tante",
     "Undefined": "Ongedefinieerd",
     "Unexpected error on login.": "Onverwachte fout bij inloggen.",
     "Unknown": "Onbekend",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Waarde gekopieerd naar uw klembord",
     "Vaults contain all your contacts data.": "Kluizen bevatten al uw contactgegevens.",
     "Vault settings": "Kluisinstellingen",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "verificatie email verzonden",
     "Verified": "Geverifieerd",
     "Verify Email Address": "Verifieer e-mailadres",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Schrijf het bedrag met een punt als u decimalen nodig heeft, zoals 100,50",
     "Written on": "Geschreven op",
     "wrote a note": "schreef een briefje",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "jaar",
     "Years": "Jaren",
     "You are here:": "Je bent hier:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Je kunt dat op elk moment wijzigen.",
     "You can choose how you want Monica to display dates in the application.": "Je kunt kiezen hoe je wilt dat Monica datums in de applicatie weergeeft.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "U kunt kiezen welke valuta’s in uw account moeten worden ingeschakeld en welke niet.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "U kunt aanpassen hoe contacten moeten worden weergegeven volgens uw eigen smaak\/cultuur. Misschien zou je James Bond willen gebruiken in plaats van Bond James. Hier kunt u het naar wens definiëren.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "U kunt aanpassen hoe contacten moeten worden weergegeven volgens uw eigen smaak/cultuur. Misschien zou je James Bond willen gebruiken in plaats van Bond James. Hier kunt u het naar wens definiëren.",
     "You can customize the criteria that let you track your mood.": "U kunt de criteria aanpassen waarmee u uw humeur kunt volgen.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "U kunt contacten tussen kluizen verplaatsen. Deze verandering is onmiddellijk. U kunt alleen contacten verplaatsen naar kluizen waarvan u deel uitmaakt. Alle contactgegevens verhuizen mee.",
     "You cannot remove your own administrator privilege.": "U kunt uw eigen beheerdersrechten niet verwijderen.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Je wilde herinnerd worden aan het volgende:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "U ZULT nog steeds uw account op Monica of OfficeLife moeten verwijderen.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "U bent uitgenodigd om dit e-mailadres te gebruiken in Monica, een open source persoonlijk CRM, zodat we het kunnen gebruiken om u meldingen te sturen.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️Gevarenzone",
     "🌳 Chalet": "🌳Chalet",
     "🏠 Secondary residence": "🏠 Tweede verblijfplaats",
