--- a/lang/nn.json
+++ b/lang/nn.json
@@ -220,7 +220,7 @@
     "boss": "sjef",
     "Bought": "Kjøpt",
     "Breakdown of the current usage": "Oversikt over gjeldende bruk",
-    "brother\/sister": "bror søster",
+    "brother/sister": "bror/søster",
     "Browser Sessions": "Nettleserøkter",
     "Buddhist": "buddhist",
     "Business": "Virksomhet",
@@ -364,7 +364,7 @@
     "Delete the photo": "Slett bildet",
     "Delete the slice": "Slett skiven",
     "Delete the vault": "Slett hvelvet",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Slett kontoen din på https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Slett kontoen din på https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Å slette hvelvet betyr å slette alle dataene inne i dette hvelvet, for alltid. Det er ingen vei tilbake. Vær sikker.",
     "Description": "Beskrivelse",
     "Detail of a goal": "Detalj av et mål",
@@ -478,7 +478,7 @@
     "Had a promotion": "Hadde en forfremmelse",
     "Hamster": "Hamster",
     "Have a great day,": "Ha en flott dag,",
-    "he\/him": "han ham",
+    "he/him": "han/ham",
     "Hello!": "Hallo!",
     "Help": "Hjelp",
     "Hi :name": "Hei :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Navn på påminnelsen",
     "Name of the reverse relationship": "Navn på det omvendte forholdet",
     "Nature of the call": "Samtalens art",
-    "nephew\/niece": "nevø niese",
+    "nephew/niece": "nevø/niese",
     "New Password": "Nytt passord",
     "New to Monica?": "Ny hos Monica?",
     "Next": "Neste",
@@ -696,7 +696,7 @@
     "Password": "Passord",
     "Payment Required": "Betaling kreves",
     "Pending Team Invitations": "Ventende teaminvitasjoner",
-    "per\/per": "pr\/pr",
+    "per/per": "pr/pr",
     "Permanently delete this team.": "Slett dette teamet permanent.",
     "Permanently delete your account.": "Slett kontoen din permanent.",
     "Permission for :name": "Tillatelse for :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Vennligst oppgi kontaktene",
     "Please join Monica": "Bli med Monica",
     "Please provide the email address of the person you would like to add to this team.": "Vennligst oppgi e-postadressen til personen du vil legge til i dette teamet.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Les vår <link>dokumentasjon<\/link> for å vite mer om denne funksjonen, og hvilke variabler du har tilgang til.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Les vår <link>dokumentasjon</link> for å vite mer om denne funksjonen, og hvilke variabler du har tilgang til.",
     "Please select a page on the left to load modules.": "Velg en side til venstre for å laste inn moduler.",
     "Please type a few characters to create a new label.": "Skriv inn noen få tegn for å lage en ny etikett.",
     "Please type a few characters to create a new tag.": "Skriv inn noen få tegn for å lage en ny tag.",
@@ -835,7 +835,7 @@
     "Setup Key": "Oppsettnøkkel",
     "Setup Key:": "Oppsettnøkkel:",
     "Setup Telegram": "Sett opp telegram",
-    "she\/her": "hun henne",
+    "she/her": "hun/henne",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Vis Kalender-fanen",
     "Show Companies tab": "Vis firmaer-fanen",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Hvelvet er opprettet",
     "The vault has been deleted": "Hvelvet er slettet",
     "The vault have been updated": "Hvelvet er oppdatert",
-    "they\/them": "de dem",
+    "they/them": "de/dem",
     "This address is not active anymore": "Denne adressen er ikke aktiv lenger",
     "This device": "Denne enheten",
     "This email is a test email to check if Monica can send an email to this email address.": "Denne e-posten er en test-e-post for å sjekke om Monica kan sende en e-post til denne e-postadressen.",
@@ -1096,7 +1096,7 @@
     "to": "til",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "For å fullføre aktiveringen av tofaktorautentisering, skann følgende QR-kode ved å bruke telefonens autentiseringsprogram eller skriv inn oppsettnøkkelen og oppgi den genererte OTP-koden.",
     "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "For å fullføre aktiveringen av tofaktorautentisering, skann følgende QR-kode ved å bruke telefonens autentiseringsprogram eller skriv inn oppsettnøkkelen og oppgi den genererte OTP-koden.",
-    "Toggle navigation": "Vis\/skjul navigasjon",
+    "Toggle navigation": "Vis/skjul navigasjon",
     "To hear their story": "For å høre historien deres",
     "Token Name": "Token navn",
     "Token name (for your reference only)": "Tokennavn (bare for din referanse)",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Fjern kontakt",
     "unarchived the contact": "har avarkivert kontakten",
     "Unauthorized": "Uautorisert",
-    "uncle\/aunt": "onkel tante",
+    "uncle/aunt": "onkel/tante",
     "Undefined": "Udefinert",
     "Unexpected error on login.": "Uventet feil ved pålogging.",
     "Unknown": "Ukjent",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Verdien er kopiert til utklippstavlen",
     "Vaults contain all your contacts data.": "Hvelv inneholder alle kontaktdataene dine.",
     "Vault settings": "Innstillinger for hvelv",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Bekreftelses-e-post sendt",
     "Verified": "Verifisert",
     "Verify Email Address": "Bekreft e-postadresse",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Skriv beløpet med en prikk hvis du trenger desimaler, for eksempel 100,50",
     "Written on": "Skrevet på",
     "wrote a note": "skrev et notat",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "år",
     "Years": "år",
     "You are here:": "Du er her:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Du kan endre det når som helst.",
     "You can choose how you want Monica to display dates in the application.": "Du kan velge hvordan du vil at Monica skal vise datoer i applikasjonen.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Du kan velge hvilke valutaer som skal være aktivert i kontoen din, og hvilken som ikke skal.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan tilpasse hvordan kontakter skal vises etter din egen smak\/kultur. Kanskje du vil bruke James Bond i stedet for Bond James. Her kan du definere det etter eget ønske.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan tilpasse hvordan kontakter skal vises etter din egen smak/kultur. Kanskje du vil bruke James Bond i stedet for Bond James. Her kan du definere det etter eget ønske.",
     "You can customize the criteria that let you track your mood.": "Du kan tilpasse kriteriene som lar deg spore humøret ditt.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Du kan flytte kontakter mellom hvelv. Denne endringen er umiddelbar. Du kan bare flytte kontakter til hvelv du er en del av. Alle kontaktdata vil flytte med den.",
     "You cannot remove your own administrator privilege.": "Du kan ikke fjerne din egen administratorrettighet.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Du ønsket å bli påminnet om følgende:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Du MÅ fortsatt slette kontoen din på Monica eller OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Du har blitt invitert til å bruke denne e-postadressen i Monica, en åpen kildekode personlig CRM, slik at vi kan bruke den til å sende deg varsler.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Faresone",
     "🌳 Chalet": "🌳 Hytte",
     "🏠 Secondary residence": "🏠 Sekundærbolig",
