--- a/lang/pa.json
+++ b/lang/pa.json
@@ -220,7 +220,7 @@
     "boss": "ਬੌਸ",
     "Bought": "ਖਰੀਦਿਆ",
     "Breakdown of the current usage": "ਮੌਜੂਦਾ ਵਰਤੋਂ ਨੂੰ ਤੋੜਨਾ",
-    "brother\/sister": "ਭਰਾ\/ਭੈਣ",
+    "brother/sister": "ਭਰਾ/ਭੈਣ",
     "Browser Sessions": "ਬ੍ਰਾਊਜ਼ਰ ਸੈਸ਼ਨ",
     "Buddhist": "ਬੋਧੀ",
     "Business": "ਕਾਰੋਬਾਰ",
@@ -364,7 +364,7 @@
     "Delete the photo": "ਫੋਟੋ ਨੂੰ ਮਿਟਾਓ",
     "Delete the slice": "ਟੁਕੜਾ ਮਿਟਾਓ",
     "Delete the vault": "ਵਾਲਟ ਨੂੰ ਮਿਟਾਓ",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com ’ਤੇ ਆਪਣਾ ਖਾਤਾ ਮਿਟਾਓ।",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com ’ਤੇ ਆਪਣਾ ਖਾਤਾ ਮਿਟਾਓ।",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "ਵਾਲਟ ਨੂੰ ਮਿਟਾਉਣ ਦਾ ਮਤਲਬ ਹੈ ਇਸ ਵਾਲਟ ਦੇ ਅੰਦਰਲੇ ਸਾਰੇ ਡੇਟਾ ਨੂੰ ਹਮੇਸ਼ਾ ਲਈ ਮਿਟਾਉਣਾ। ਪਿੱਛੇ ਮੁੜਨ ਵਾਲਾ ਨਹੀਂ ਹੈ। ਕਿਰਪਾ ਕਰਕੇ ਪੱਕਾ ਕਰੋ।",
     "Description": "ਵਰਣਨ",
     "Detail of a goal": "ਇੱਕ ਟੀਚੇ ਦਾ ਵੇਰਵਾ",
@@ -479,7 +479,7 @@
     "Had a promotion": "ਦੀ ਤਰੱਕੀ ਹੋਈ ਸੀ",
     "Hamster": "ਹੈਮਸਟਰ",
     "Have a great day,": "ਤੁਹਾਡਾ ਦਿਨ ਅੱਛਾ ਹੋਵੇ,",
-    "he\/him": "ਉਹ\/ਉਸਨੂੰ",
+    "he/him": "ਉਹ/ਉਸਨੂੰ",
     "Hello!": "ਸਤ ਸ੍ਰੀ ਅਕਾਲ!",
     "Help": "ਮਦਦ ਕਰੋ",
     "Hi :name": "ਹੈਲੋ :name",
@@ -639,7 +639,7 @@
     "Name of the reminder": "ਰੀਮਾਈਂਡਰ ਦਾ ਨਾਮ",
     "Name of the reverse relationship": "ਉਲਟ ਰਿਸ਼ਤੇ ਦਾ ਨਾਮ",
     "Nature of the call": "ਕਾਲ ਦੀ ਪ੍ਰਕਿਰਤੀ",
-    "nephew\/niece": "ਭਤੀਜਾ\/ਭਤੀਜੀ",
+    "nephew/niece": "ਭਤੀਜਾ/ਭਤੀਜੀ",
     "New Password": "ਨਵਾਂ ਪਾਸਵਰਡ",
     "New to Monica?": "Monica ਲਈ ਨਵੇਂ?",
     "Next": "ਅਗਲਾ",
@@ -697,7 +697,7 @@
     "Password": "ਪਾਸਵਰਡ",
     "Payment Required": "ਭੁਗਤਾਨ ਦੀ ਲੋੜ ਹੈ",
     "Pending Team Invitations": "ਲੰਬਿਤ ਟੀਮ ਦੇ ਸੱਦੇ",
-    "per\/per": "ਪ੍ਰਤੀ\/ਪ੍ਰਤੀ",
+    "per/per": "ਪ੍ਰਤੀ/ਪ੍ਰਤੀ",
     "Permanently delete this team.": "ਇਸ ਟੀਮ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾਓ।",
     "Permanently delete your account.": "ਆਪਣੇ ਖਾਤੇ ਨੂੰ ਪੱਕੇ ਤੌਰ ’ਤੇ ਮਿਟਾਓ।",
     "Permission for :name": ":name ਲਈ ਇਜਾਜ਼ਤ",
@@ -730,7 +730,7 @@
     "Please indicate the contacts": "ਕਿਰਪਾ ਕਰਕੇ ਸੰਪਰਕਾਂ ਨੂੰ ਦਰਸਾਓ",
     "Please join Monica": "ਕਿਰਪਾ ਕਰਕੇ Monica ਨਾਲ ਜੁੜੋ",
     "Please provide the email address of the person you would like to add to this team.": "ਕਿਰਪਾ ਕਰਕੇ ਉਸ ਵਿਅਕਤੀ ਦਾ ਈਮੇਲ ਪਤਾ ਪ੍ਰਦਾਨ ਕਰੋ ਜਿਸਨੂੰ ਤੁਸੀਂ ਇਸ ਟੀਮ ਵਿੱਚ ਸ਼ਾਮਲ ਕਰਨਾ ਚਾਹੁੰਦੇ ਹੋ।",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "ਇਸ ਵਿਸ਼ੇਸ਼ਤਾ ਬਾਰੇ ਹੋਰ ਜਾਣਨ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਸਾਡੇ <link>ਦਸਤਾਵੇਜ਼<\/link> ਨੂੰ ਪੜ੍ਹੋ, ਅਤੇ ਤੁਹਾਡੇ ਕੋਲ ਕਿਹੜੇ ਵੇਰੀਏਬਲ ਤੱਕ ਪਹੁੰਚ ਹੈ।",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "ਇਸ ਵਿਸ਼ੇਸ਼ਤਾ ਬਾਰੇ ਹੋਰ ਜਾਣਨ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਸਾਡੇ <link>ਦਸਤਾਵੇਜ਼</link> ਨੂੰ ਪੜ੍ਹੋ, ਅਤੇ ਤੁਹਾਡੇ ਕੋਲ ਕਿਹੜੇ ਵੇਰੀਏਬਲ ਤੱਕ ਪਹੁੰਚ ਹੈ।",
     "Please select a page on the left to load modules.": "ਕਿਰਪਾ ਕਰਕੇ ਮੋਡੀਊਲ ਲੋਡ ਕਰਨ ਲਈ ਖੱਬੇ ਪਾਸੇ ਇੱਕ ਪੰਨਾ ਚੁਣੋ।",
     "Please type a few characters to create a new label.": "ਇੱਕ ਨਵਾਂ ਲੇਬਲ ਬਣਾਉਣ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਕੁਝ ਅੱਖਰ ਟਾਈਪ ਕਰੋ।",
     "Please type a few characters to create a new tag.": "ਇੱਕ ਨਵਾਂ ਟੈਗ ਬਣਾਉਣ ਲਈ ਕਿਰਪਾ ਕਰਕੇ ਕੁਝ ਅੱਖਰ ਟਾਈਪ ਕਰੋ।",
@@ -836,7 +836,7 @@
     "Setup Key": "ਸੈੱਟਅੱਪ ਕੁੰਜੀ",
     "Setup Key:": "ਸੈੱਟਅੱਪ ਕੁੰਜੀ:",
     "Setup Telegram": "ਟੈਲੀਗ੍ਰਾਮ ਸੈੱਟਅੱਪ ਕਰੋ",
-    "she\/her": "ਉਹ\/ਉਸ ਨੂੰ",
+    "she/her": "ਉਹ/ਉਸ ਨੂੰ",
     "Shintoist": "ਸ਼ਿੰਟੋਵਾਦੀ",
     "Show Calendar tab": "ਕੈਲੰਡਰ ਟੈਬ ਦਿਖਾਓ",
     "Show Companies tab": "ਕੰਪਨੀਆਂ ਟੈਬ ਦਿਖਾਓ",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "ਵਾਲਟ ਬਣਾਇਆ ਗਿਆ ਹੈ",
     "The vault has been deleted": "ਵਾਲਟ ਨੂੰ ਮਿਟਾ ਦਿੱਤਾ ਗਿਆ ਹੈ",
     "The vault have been updated": "ਵਾਲਟ ਨੂੰ ਅਪਡੇਟ ਕੀਤਾ ਗਿਆ ਹੈ",
-    "they\/them": "ਉਹ\/ਉਨ੍ਹਾਂ ਨੂੰ",
+    "they/them": "ਉਹ/ਉਨ੍ਹਾਂ ਨੂੰ",
     "This address is not active anymore": "ਇਹ ਪਤਾ ਹੁਣ ਕਿਰਿਆਸ਼ੀਲ ਨਹੀਂ ਹੈ",
     "This device": "ਇਹ ਯੰਤਰ",
     "This email is a test email to check if Monica can send an email to this email address.": "ਇਹ ਈਮੇਲ ਇਹ ਜਾਂਚ ਕਰਨ ਲਈ ਇੱਕ ਟੈਸਟ ਈਮੇਲ ਹੈ ਕਿ ਕੀ Monica ਇਸ ਈਮੇਲ ਪਤੇ ’ਤੇ ਈਮੇਲ ਭੇਜ ਸਕਦੀ ਹੈ।",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "ਅਣਆਰਕਾਈਵ ਸੰਪਰਕ",
     "unarchived the contact": "ਸੰਪਰਕ ਨੂੰ ਅਣ-ਪੁਰਾਲੇਖਬੱਧ ਕੀਤਾ",
     "Unauthorized": "ਅਣਅਧਿਕਾਰਤ",
-    "uncle\/aunt": "ਚਾਚਾ\/ਮਾਸੀ",
+    "uncle/aunt": "ਚਾਚਾ/ਮਾਸੀ",
     "Undefined": "ਪਰਿਭਾਸ਼ਿਤ",
     "Unexpected error on login.": "ਲੌਗਇਨ ’ਤੇ ਅਚਾਨਕ ਗਲਤੀ।",
     "Unknown": "ਅਗਿਆਤ",
@@ -1161,7 +1161,7 @@
     "Value copied into your clipboard": "ਮੁੱਲ ਤੁਹਾਡੇ ਕਲਿੱਪਬੋਰਡ ਵਿੱਚ ਕਾਪੀ ਕੀਤਾ ਗਿਆ",
     "Vaults contain all your contacts data.": "Vaults ਵਿੱਚ ਤੁਹਾਡੇ ਸਾਰੇ ਸੰਪਰਕ ਡੇਟਾ ਸ਼ਾਮਲ ਹੁੰਦੇ ਹਨ।",
     "Vault settings": "ਵਾਲਟ ਸੈਟਿੰਗਾਂ",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "ਪੁਸ਼ਟੀਕਰਨ ਈਮੇਲ ਭੇਜੀ ਗਈ",
     "Verified": "ਪ੍ਰਮਾਣਿਤ",
     "Verify Email Address": "ਈਮੇਲ ਪਤੇ ਦੀ ਪੁਸ਼ਟੀ ਕਰੋ",
@@ -1221,7 +1221,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "ਜੇਕਰ ਤੁਹਾਨੂੰ ਦਸ਼ਮਲਵ ਦੀ ਲੋੜ ਹੋਵੇ ਤਾਂ ਬਿੰਦੀ ਨਾਲ ਰਕਮ ਲਿਖੋ, ਜਿਵੇਂ ਕਿ 100.50",
     "Written on": "’ਤੇ ਲਿਖਿਆ ਹੈ",
     "wrote a note": "ਇੱਕ ਨੋਟ ਲਿਖਿਆ",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "ਸਾਲ",
     "Years": "ਸਾਲ",
     "You are here:": "ਤੁਸੀਂ ਇੱਥੇ ਹੋ:",
@@ -1235,7 +1235,7 @@
     "You can change that at any time.": "ਤੁਸੀਂ ਇਸਨੂੰ ਕਿਸੇ ਵੀ ਸਮੇਂ ਬਦਲ ਸਕਦੇ ਹੋ।",
     "You can choose how you want Monica to display dates in the application.": "ਤੁਸੀਂ ਇਹ ਚੁਣ ਸਕਦੇ ਹੋ ਕਿ ਤੁਸੀਂ Monica ਨੂੰ ਐਪਲੀਕੇਸ਼ਨ ਵਿੱਚ ਤਾਰੀਖਾਂ ਕਿਵੇਂ ਦਿਖਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ।",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "ਤੁਸੀਂ ਚੁਣ ਸਕਦੇ ਹੋ ਕਿ ਤੁਹਾਡੇ ਖਾਤੇ ਵਿੱਚ ਕਿਹੜੀਆਂ ਮੁਦਰਾਵਾਂ ਨੂੰ ਸਮਰੱਥ ਬਣਾਇਆ ਜਾਣਾ ਚਾਹੀਦਾ ਹੈ, ਅਤੇ ਕਿਹੜੀ ਨਹੀਂ ਹੋਣੀ ਚਾਹੀਦੀ।",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "ਤੁਸੀਂ ਅਨੁਕੂਲਿਤ ਕਰ ਸਕਦੇ ਹੋ ਕਿ ਤੁਹਾਡੇ ਆਪਣੇ ਸਵਾਦ\/ਸਭਿਆਚਾਰ ਦੇ ਅਨੁਸਾਰ ਸੰਪਰਕ ਕਿਵੇਂ ਪ੍ਰਦਰਸ਼ਿਤ ਕੀਤੇ ਜਾਣੇ ਚਾਹੀਦੇ ਹਨ। ਸ਼ਾਇਦ ਤੁਸੀਂ ਬਾਂਡ ਜੇਮਸ ਦੀ ਬਜਾਏ ਜੇਮਸ ਬਾਂਡ ਦੀ ਵਰਤੋਂ ਕਰਨਾ ਚਾਹੋਗੇ। ਇੱਥੇ, ਤੁਸੀਂ ਇਸਨੂੰ ਆਪਣੀ ਮਰਜ਼ੀ ਨਾਲ ਪਰਿਭਾਸ਼ਿਤ ਕਰ ਸਕਦੇ ਹੋ।",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "ਤੁਸੀਂ ਅਨੁਕੂਲਿਤ ਕਰ ਸਕਦੇ ਹੋ ਕਿ ਤੁਹਾਡੇ ਆਪਣੇ ਸਵਾਦ/ਸਭਿਆਚਾਰ ਦੇ ਅਨੁਸਾਰ ਸੰਪਰਕ ਕਿਵੇਂ ਪ੍ਰਦਰਸ਼ਿਤ ਕੀਤੇ ਜਾਣੇ ਚਾਹੀਦੇ ਹਨ। ਸ਼ਾਇਦ ਤੁਸੀਂ ਬਾਂਡ ਜੇਮਸ ਦੀ ਬਜਾਏ ਜੇਮਸ ਬਾਂਡ ਦੀ ਵਰਤੋਂ ਕਰਨਾ ਚਾਹੋਗੇ। ਇੱਥੇ, ਤੁਸੀਂ ਇਸਨੂੰ ਆਪਣੀ ਮਰਜ਼ੀ ਨਾਲ ਪਰਿਭਾਸ਼ਿਤ ਕਰ ਸਕਦੇ ਹੋ।",
     "You can customize the criteria that let you track your mood.": "ਤੁਸੀਂ ਉਹਨਾਂ ਮਾਪਦੰਡਾਂ ਨੂੰ ਅਨੁਕੂਲਿਤ ਕਰ ਸਕਦੇ ਹੋ ਜੋ ਤੁਹਾਨੂੰ ਤੁਹਾਡੇ ਮੂਡ ਨੂੰ ਟਰੈਕ ਕਰਨ ਦਿੰਦੇ ਹਨ।",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "ਤੁਸੀਂ ਵਾਲਟ ਦੇ ਵਿਚਕਾਰ ਸੰਪਰਕਾਂ ਨੂੰ ਮੂਵ ਕਰ ਸਕਦੇ ਹੋ। ਇਹ ਤਬਦੀਲੀ ਤੁਰੰਤ ਹੈ। ਤੁਸੀਂ ਸੰਪਰਕਾਂ ਨੂੰ ਸਿਰਫ਼ ਉਹਨਾਂ ਵਾਲਟਾਂ ਵਿੱਚ ਲਿਜਾ ਸਕਦੇ ਹੋ ਜਿਸਦਾ ਤੁਸੀਂ ਹਿੱਸਾ ਹੋ। ਸਾਰੇ ਸੰਪਰਕ ਡੇਟਾ ਇਸਦੇ ਨਾਲ ਚਲੇ ਜਾਣਗੇ.",
     "You cannot remove your own administrator privilege.": "ਤੁਸੀਂ ਆਪਣੇ ਖੁਦ ਦੇ ਪ੍ਰਸ਼ਾਸਕ ਵਿਸ਼ੇਸ਼ ਅਧਿਕਾਰ ਨੂੰ ਨਹੀਂ ਹਟਾ ਸਕਦੇ ਹੋ।",
@@ -1269,7 +1269,7 @@
     "You wanted to be reminded of the following:": "ਤੁਸੀਂ ਹੇਠ ਲਿਖਿਆਂ ਦੀ ਯਾਦ ਦਿਵਾਉਣਾ ਚਾਹੁੰਦੇ ਹੋ:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "ਤੁਹਾਨੂੰ ਅਜੇ ਵੀ Monica ਜਾਂ OfficeLife ’ਤੇ ਆਪਣਾ ਖਾਤਾ ਮਿਟਾਉਣਾ ਹੋਵੇਗਾ।",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "ਤੁਹਾਨੂੰ Monica, ਇੱਕ ਓਪਨ ਸੋਰਸ ਨਿੱਜੀ CRM ਵਿੱਚ ਇਸ ਈਮੇਲ ਪਤੇ ਦੀ ਵਰਤੋਂ ਕਰਨ ਲਈ ਸੱਦਾ ਦਿੱਤਾ ਗਿਆ ਹੈ, ਤਾਂ ਜੋ ਅਸੀਂ ਤੁਹਾਨੂੰ ਸੂਚਨਾਵਾਂ ਭੇਜਣ ਲਈ ਇਸਦੀ ਵਰਤੋਂ ਕਰ ਸਕੀਏ।",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ ਖ਼ਤਰਾ ਜ਼ੋਨ",
     "🌳 Chalet": "🌳 ਚਾਲੇ",
     "🏠 Secondary residence": "🏠 ਸੈਕੰਡਰੀ ਨਿਵਾਸ",
