--- a/lang/pl.json
+++ b/lang/pl.json
@@ -220,7 +220,7 @@
     "boss": "szef",
     "Bought": "Kupił",
     "Breakdown of the current usage": "Podział bieżącego wykorzystania",
-    "brother\/sister": "brat siostra",
+    "brother/sister": "brat/siostra",
     "Browser Sessions": "Sesje Przeglądarki",
     "Buddhist": "buddyjski",
     "Business": "Biznes",
@@ -364,7 +364,7 @@
     "Delete the photo": "Usuń zdjęcie",
     "Delete the slice": "Usuń plasterek",
     "Delete the vault": "Usuń skarbiec",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Usuń swoje konto na https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Usuń swoje konto na https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Usunięcie skarbca oznacza usunięcie wszystkich danych znajdujących się w tym skarbcu na zawsze. Nie ma powrotu. Proszę mieć pewność.",
     "Description": "Opis",
     "Detail of a goal": "Szczegół celu",
@@ -478,7 +478,7 @@
     "Had a promotion": "Miał awans",
     "Hamster": "Chomik",
     "Have a great day,": "Miłego dnia,",
-    "he\/him": "on\/on",
+    "he/him": "on/on",
     "Hello!": "Cześć!",
     "Help": "Pomoc",
     "Hi :name": "Cześć :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Nazwa przypomnienia",
     "Name of the reverse relationship": "Nazwa odwrotnej zależności",
     "Nature of the call": "Charakter połączenia",
-    "nephew\/niece": "siostrzeniec siostrzenica",
+    "nephew/niece": "siostrzeniec/siostrzenica",
     "New Password": "Nowe Hasło",
     "New to Monica?": "Jesteś nowy w Monica?",
     "Next": "Następny",
@@ -696,7 +696,7 @@
     "Password": "Hasło",
     "Payment Required": "Płatność Wymagana",
     "Pending Team Invitations": "Oczekujące Zaproszenia do Zespołu",
-    "per\/per": "za\/za",
+    "per/per": "za/za",
     "Permanently delete this team.": "Trwale usuń ten zespół.",
     "Permanently delete your account.": "Trwale usuń swoje konto.",
     "Permission for :name": "Pozwolenie na :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Proszę podać kontakty",
     "Please join Monica": "Proszę o dołączenie do Monica",
     "Please provide the email address of the person you would like to add to this team.": "Podaj adres e-mail osoby, którą chcesz dodać do tego zespołu.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Przeczytaj naszą <link>dokumentację<\/link>, aby dowiedzieć się więcej o tej funkcji i zmiennych, do których masz dostęp.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Przeczytaj naszą <link>dokumentację</link>, aby dowiedzieć się więcej o tej funkcji i zmiennych, do których masz dostęp.",
     "Please select a page on the left to load modules.": "Aby załadować moduły, wybierz stronę po lewej stronie.",
     "Please type a few characters to create a new label.": "Wpisz kilka znaków, aby utworzyć nową etykietę.",
     "Please type a few characters to create a new tag.": "Wpisz kilka znaków, aby utworzyć nowy tag.",
@@ -835,7 +835,7 @@
     "Setup Key": "Klucz Ustawień",
     "Setup Key:": "Klucz konfiguracyjny:",
     "Setup Telegram": "Skonfiguruj telegram",
-    "she\/her": "ona jej",
+    "she/her": "ona/jej",
     "Shintoist": "Szintoista",
     "Show Calendar tab": "Pokaż kartę Kalendarz",
     "Show Companies tab": "Pokaż zakładkę Firmy",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Skarbiec został utworzony",
     "The vault has been deleted": "Skarbiec został usunięty",
     "The vault have been updated": "Skarbiec został zaktualizowany",
-    "they\/them": "oni\/oni",
+    "they/them": "oni/oni",
     "This address is not active anymore": "Adres ten nie jest już aktywny",
     "This device": "To urządzenie",
     "This email is a test email to check if Monica can send an email to this email address.": "Ten e-mail jest wiadomością testową mającą na celu sprawdzenie, czy Monica może wysłać wiadomość na ten adres e-mail.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Zarchiwizuj kontakt",
     "unarchived the contact": "rozarchiwizowano kontakt",
     "Unauthorized": "Nieautoryzowany Dostęp",
-    "uncle\/aunt": "Wujek ciocia",
+    "uncle/aunt": "Wujek/ciocia",
     "Undefined": "Nieokreślony",
     "Unexpected error on login.": "Nieoczekiwany błąd podczas logowania.",
     "Unknown": "Nieznane",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Wartość skopiowana do schowka",
     "Vaults contain all your contacts data.": "Skarbce zawierają wszystkie dane Twoich kontaktów.",
     "Vault settings": "Ustawienia skarbca",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "E-mail weryfikacyjny został wysłany",
     "Verified": "Zweryfikowano",
     "Verify Email Address": "Zweryfikuj Adres E-mail",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Jeśli potrzebujesz miejsc po przecinku, na przykład 100,50, wpisz kwotę z kropką",
     "Written on": "Napisane na",
     "wrote a note": "napisał notatkę",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "rok",
     "Years": "Lata",
     "You are here:": "Jesteś tutaj:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Możesz to zmienić w dowolnym momencie.",
     "You can choose how you want Monica to display dates in the application.": "Możesz wybrać, w jaki sposób Monica ma wyświetlać daty w aplikacji.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Możesz wybrać, które waluty mają być włączone na Twoim koncie, a które nie.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Możesz dostosować sposób wyświetlania kontaktów zgodnie z własnym gustem\/kulturą. Być może zamiast Bonda Jamesa chciałbyś użyć Jamesa Bonda. Tutaj możesz to dowolnie zdefiniować.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Możesz dostosować sposób wyświetlania kontaktów zgodnie z własnym gustem/kulturą. Być może zamiast Bonda Jamesa chciałbyś użyć Jamesa Bonda. Tutaj możesz to dowolnie zdefiniować.",
     "You can customize the criteria that let you track your mood.": "Możesz dostosować kryteria, które pozwolą Ci śledzić swój nastrój.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Możesz przenosić kontakty pomiędzy skarbcami. Ta zmiana jest natychmiastowa. Kontakty możesz przenosić tylko do skarbców, których jesteś częścią. Wszystkie dane kontaktów zostaną przeniesione wraz z nim.",
     "You cannot remove your own administrator privilege.": "Nie można usunąć własnych uprawnień administratora.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Chciałeś przypomnieć sobie następujące kwestie:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Nadal będziesz musiał usunąć swoje konto w Monica lub OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Zostałeś zaproszony do korzystania z tego adresu e-mail w Monica, osobistym systemie CRM typu open source, abyśmy mogli go używać do wysyłania Ci powiadomień.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Strefa zagrożenia",
     "🌳 Chalet": "🌳 Chata",
     "🏠 Secondary residence": "🏠 Drugie miejsce zamieszkania",
