--- a/lang/pt.json
+++ b/lang/pt.json
@@ -220,7 +220,7 @@
     "boss": "chefe",
     "Bought": "Comprado",
     "Breakdown of the current usage": "Detalhamento do uso atual",
-    "brother\/sister": "irmão irmã",
+    "brother/sister": "irmão/irmã",
     "Browser Sessions": "Sessões em Browser",
     "Buddhist": "budista",
     "Business": "Negócios",
@@ -364,7 +364,7 @@
     "Delete the photo": "Exclua a foto",
     "Delete the slice": "Exclua a fatia",
     "Delete the vault": "Excluir o cofre",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Exclua sua conta em https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Exclua sua conta em https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Excluir o cofre significa excluir todos os dados dentro dele para sempre. Não há como voltar atrás. Por favor, tenha certeza.",
     "Description": "Descrição",
     "Detail of a goal": "Detalhe de um gol",
@@ -478,7 +478,7 @@
     "Had a promotion": "Teve uma promoção",
     "Hamster": "Hamster",
     "Have a great day,": "Tenha um ótimo dia,",
-    "he\/him": "ele\/ele",
+    "he/him": "ele/ele",
     "Hello!": "Olá!",
     "Help": "Ajuda",
     "Hi :name": "Olá :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Nome do lembrete",
     "Name of the reverse relationship": "Nome do relacionamento reverso",
     "Nature of the call": "Natureza da chamada",
-    "nephew\/niece": "sobrinho sobrinha",
+    "nephew/niece": "sobrinho/sobrinha",
     "New Password": "Nova Palavra-passe",
     "New to Monica?": "Novo na Monica?",
     "Next": "Próximo",
@@ -696,7 +696,7 @@
     "Password": "Palavra-passe",
     "Payment Required": "Pagamento Requerido",
     "Pending Team Invitations": "Convites De Equipa Pendentes",
-    "per\/per": "por\/por",
+    "per/per": "por/por",
     "Permanently delete this team.": "Eliminar esta equipa permanentemente.",
     "Permanently delete your account.": "Eliminar a sua conta permanentemente.",
     "Permission for :name": "Permissão para :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Por favor indique os contactos",
     "Please join Monica": "Junte-se à Monica",
     "Please provide the email address of the person you would like to add to this team.": "Por favor indique o e-mail da pessoa que gostaria de acrescentar a esta equipa",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Leia nossa <link>documentação<\/link> para saber mais sobre esse recurso e a quais variáveis você tem acesso.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Leia nossa <link>documentação</link> para saber mais sobre esse recurso e a quais variáveis você tem acesso.",
     "Please select a page on the left to load modules.": "Selecione uma página à esquerda para carregar os módulos.",
     "Please type a few characters to create a new label.": "Digite alguns caracteres para criar um novo rótulo.",
     "Please type a few characters to create a new tag.": "Digite alguns caracteres para criar uma nova tag.",
@@ -835,7 +835,7 @@
     "Setup Key": "Chave de configuração",
     "Setup Key:": "Chave de configuração:",
     "Setup Telegram": "Configurar telegrama",
-    "she\/her": "ela\/ela",
+    "she/her": "ela/ela",
     "Shintoist": "Xintoísta",
     "Show Calendar tab": "Mostrar guia Calendário",
     "Show Companies tab": "Mostrar guia Empresas",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "O cofre foi criado",
     "The vault has been deleted": "O cofre foi excluído",
     "The vault have been updated": "O cofre foi atualizado",
-    "they\/them": "eles\/eles",
+    "they/them": "eles/eles",
     "This address is not active anymore": "Este endereço não está mais ativo",
     "This device": "Este dispositivo",
     "This email is a test email to check if Monica can send an email to this email address.": "Este e-mail é um e-mail de teste para verificar se Monica pode enviar um e-mail para este endereço de e-mail.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Desarquivar contato",
     "unarchived the contact": "desarquivou o contato",
     "Unauthorized": "Não autorizado",
-    "uncle\/aunt": "tio tia",
+    "uncle/aunt": "tio/tia",
     "Undefined": "Indefinido",
     "Unexpected error on login.": "Erro inesperado no login.",
     "Unknown": "Desconhecido",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Valor copiado para sua área de transferência",
     "Vaults contain all your contacts data.": "Os cofres contêm todos os dados dos seus contatos.",
     "Vault settings": "Configurações do cofre",
-    "ve\/ver": "já\/ver",
+    "ve/ver": "já/ver",
     "Verification email sent": "E-mail de verificação enviado",
     "Verified": "Verificado",
     "Verify Email Address": "Verifique o endereço de e-mail",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Escreva o valor com um ponto se precisar de números decimais, como 100,50",
     "Written on": "Escrito em",
     "wrote a note": "escreveu uma nota",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "ano",
     "Years": "Anos",
     "You are here:": "Você está aqui:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Você pode mudar isso a qualquer momento.",
     "You can choose how you want Monica to display dates in the application.": "Você pode escolher como deseja que Monica exiba as datas no aplicativo.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Você pode escolher quais moedas devem ser habilitadas em sua conta e quais não devem.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Você pode personalizar como os contatos devem ser exibidos de acordo com seu gosto\/cultura. Talvez você queira usar James Bond em vez de Bond James. Aqui você pode defini-lo à vontade.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Você pode personalizar como os contatos devem ser exibidos de acordo com seu gosto/cultura. Talvez você queira usar James Bond em vez de Bond James. Aqui você pode defini-lo à vontade.",
     "You can customize the criteria that let you track your mood.": "Você pode personalizar os critérios que permitem monitorar seu humor.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Você pode mover contatos entre cofres. Esta mudança é imediata. Você só pode mover contatos para cofres dos quais faz parte. Todos os dados dos contatos serão movidos com ele.",
     "You cannot remove your own administrator privilege.": "Você não pode remover seu próprio privilégio de administrador.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Você queria ser lembrado do seguinte:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Você ainda TERÁ que excluir sua conta no Monica ou OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Você foi convidado a usar este endereço de e-mail no Monica, um CRM pessoal de código aberto, para que possamos usá-lo para enviar notificações.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Zona de perigo",
     "🌳 Chalet": "🌳 Chalé",
     "🏠 Secondary residence": "🏠 Residência secundária",
