--- a/lang/ro.json
+++ b/lang/ro.json
@@ -220,7 +220,7 @@
     "boss": "sef",
     "Bought": "Cumparat",
     "Breakdown of the current usage": "Defalcarea utilizării curente",
-    "brother\/sister": "sora frate",
+    "brother/sister": "sora/frate",
     "Browser Sessions": "Sesiuni De Browser",
     "Buddhist": "budist",
     "Business": "Afaceri",
@@ -364,7 +364,7 @@
     "Delete the photo": "Șterge fotografia",
     "Delete the slice": "Ștergeți felia",
     "Delete the vault": "Ștergeți seiful",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Ștergeți-vă contul de pe https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Ștergeți-vă contul de pe https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Ștergerea seifului înseamnă ștergerea tuturor datelor din seif, pentru totdeauna. Nu este cale de intoarcere. Vă rugăm să fiți sigur.",
     "Description": "Descriere",
     "Detail of a goal": "Detaliu al unui obiectiv",
@@ -478,7 +478,7 @@
     "Had a promotion": "A avut o promovare",
     "Hamster": "Hamster",
     "Have a great day,": "O zi bună,",
-    "he\/him": "el lui",
+    "he/him": "el/lui",
     "Hello!": "Bună!",
     "Help": "Ajutor",
     "Hi :name": "Bună :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Numele mementoului",
     "Name of the reverse relationship": "Numele relației inverse",
     "Nature of the call": "Natura apelului",
-    "nephew\/niece": "nepoată nepot",
+    "nephew/niece": "nepoată/nepot",
     "New Password": "Parolă Nouă",
     "New to Monica?": "Nou cu Monica?",
     "Next": "Următorul",
@@ -696,7 +696,7 @@
     "Password": "Parolă",
     "Payment Required": "Plata obligatorie",
     "Pending Team Invitations": "Invitații De Echipă În Așteptare",
-    "per\/per": "per\/per",
+    "per/per": "per/per",
     "Permanently delete this team.": "Ștergeți definitiv această echipă.",
     "Permanently delete your account.": "Ștergeți definitiv contul.",
     "Permission for :name": "Permisiune pentru :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Vă rugăm să indicați contactele",
     "Please join Monica": "Vă rog să vă alăturați Monica",
     "Please provide the email address of the person you would like to add to this team.": "Vă rugăm să furnizați adresa de e-mail a persoanei pe care doriți să o adăugați la această echipă.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Vă rugăm să citiți <link>documentația<\/link> pentru a afla mai multe despre această caracteristică și la ce variabile aveți acces.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Vă rugăm să citiți <link>documentația</link> pentru a afla mai multe despre această caracteristică și la ce variabile aveți acces.",
     "Please select a page on the left to load modules.": "Vă rugăm să selectați o pagină din stânga pentru a încărca modulele.",
     "Please type a few characters to create a new label.": "Vă rugăm să introduceți câteva caractere pentru a crea o nouă etichetă.",
     "Please type a few characters to create a new tag.": "Vă rugăm să introduceți câteva caractere pentru a crea o nouă etichetă.",
@@ -835,7 +835,7 @@
     "Setup Key": "Cheie de configurare",
     "Setup Key:": "Cheie de configurare:",
     "Setup Telegram": "Configurați Telegram",
-    "she\/her": "ea\/ea",
+    "she/her": "ea/ea",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Afișați fila Calendar",
     "Show Companies tab": "Afișați fila Companii",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Seiful a fost creat",
     "The vault has been deleted": "Seiful a fost șters",
     "The vault have been updated": "Seiful a fost actualizat",
-    "they\/them": "ei lor",
+    "they/them": "ei/lor",
     "This address is not active anymore": "Această adresă nu mai este activă",
     "This device": "Acest dispozitiv",
     "This email is a test email to check if Monica can send an email to this email address.": "Acest e-mail este un e-mail de test pentru a verifica dacă Monica poate trimite un e-mail la această adresă de e-mail.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Dezarhivați persoana de contact",
     "unarchived the contact": "a dezarhivat contactul",
     "Unauthorized": "Nepermis",
-    "uncle\/aunt": "unchi mătușă",
+    "uncle/aunt": "unchi/mătușă",
     "Undefined": "Nedefinit",
     "Unexpected error on login.": "Eroare neașteptată la conectare.",
     "Unknown": "Necunoscut",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Valoarea a fost copiată în clipboard",
     "Vaults contain all your contacts data.": "Seifurile conțin toate datele de contact.",
     "Vault settings": "Setările seifului",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Email de verificare trimis",
     "Verified": "Verificat",
     "Verify Email Address": "Verifică adresă de e-mail",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Scrieți suma cu un punct dacă aveți nevoie de zecimale, cum ar fi 100,50",
     "Written on": "Scris pe",
     "wrote a note": "a scris o notă",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "an",
     "Years": "Ani",
     "You are here:": "Eşti aici:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Puteți schimba asta oricând.",
     "You can choose how you want Monica to display dates in the application.": "Puteți alege cum doriți ca Monica să afișeze datele în aplicație.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Puteți alege ce monede ar trebui să fie activate în contul dvs. și care nu ar trebui.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Puteți personaliza modul în care contactele ar trebui să fie afișate în funcție de propriul gust\/cultură. Poate că ați dori să folosiți James Bond în loc de Bond James. Aici, o poți defini după bunul plac.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Puteți personaliza modul în care contactele ar trebui să fie afișate în funcție de propriul gust/cultură. Poate că ați dori să folosiți James Bond în loc de Bond James. Aici, o poți defini după bunul plac.",
     "You can customize the criteria that let you track your mood.": "Puteți personaliza criteriile care vă permit să vă urmăriți starea de spirit.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Puteți muta contactele între seifuri. Această schimbare este imediată. Puteți muta contactele numai în seifurile din care faceți parte. Toate datele de contact se vor muta odată cu el.",
     "You cannot remove your own administrator privilege.": "Nu vă puteți elimina propriul privilegiu de administrator.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Ați vrut să vi se reamintească următoarele:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "VA trebui în continuare să vă ștergeți contul de pe Monica sau OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Ați fost invitat să utilizați această adresă de e-mail în Monica, un CRM personal open source, astfel încât să o putem folosi pentru a vă trimite notificări.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Zona de pericol",
     "🌳 Chalet": "🌳 Cabana",
     "🏠 Secondary residence": "🏠 Reședință secundară",
