--- a/lang/ru.json
+++ b/lang/ru.json
@@ -220,7 +220,7 @@
     "boss": "босс",
     "Bought": "Купил",
     "Breakdown of the current usage": "Разбивка текущего использования",
-    "brother\/sister": "брат сестра",
+    "brother/sister": "брат/сестра",
     "Browser Sessions": "Сеансы",
     "Buddhist": "буддист",
     "Business": "Бизнес",
@@ -364,7 +364,7 @@
     "Delete the photo": "Удалить фотографию",
     "Delete the slice": "Удалить фрагмент",
     "Delete the vault": "Удалить хранилище",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Удалите свою учетную запись на https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Удалите свою учетную запись на https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Удаление хранилища означает навсегда удаление всех данных внутри этого хранилища. Нет пути назад. Пожалуйста, будьте уверены.",
     "Description": "Описание",
     "Detail of a goal": "Деталь цели",
@@ -478,7 +478,7 @@
     "Had a promotion": "Было повышение по службе",
     "Hamster": "Хомяк",
     "Have a great day,": "Хорошего дня,",
-    "he\/him": "он\/его",
+    "he/him": "он/его",
     "Hello!": "Здравствуйте!",
     "Help": "Помощь",
     "Hi :name": "Привет :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Название напоминания",
     "Name of the reverse relationship": "Название обратной связи",
     "Nature of the call": "Характер звонка",
-    "nephew\/niece": "племянник племянница",
+    "nephew/niece": "племянник/племянница",
     "New Password": "Новый пароль",
     "New to Monica?": "Впервые с Monica?",
     "Next": "Следующий",
@@ -696,7 +696,7 @@
     "Password": "Пароль",
     "Payment Required": "Требуется оплата",
     "Pending Team Invitations": "Ожидающие приглашения в команду",
-    "per\/per": "за\/за",
+    "per/per": "за/за",
     "Permanently delete this team.": "Удалить эту команду навсегда.",
     "Permanently delete your account.": "Удалить свой аккаунт навсегда.",
     "Permission for :name": "Разрешение для :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Пожалуйста, укажите контакты",
     "Please join Monica": "Пожалуйста, присоединяйтесь к Monica",
     "Please provide the email address of the person you would like to add to this team.": "Укажите электронный адрес человека, которого Вы хотите добавить в эту команду.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Пожалуйста, прочитайте нашу <link>документацию<\/link>, чтобы узнать больше об этой функции и о том, к каким переменным у вас есть доступ.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Пожалуйста, прочитайте нашу <link>документацию</link>, чтобы узнать больше об этой функции и о том, к каким переменным у вас есть доступ.",
     "Please select a page on the left to load modules.": "Пожалуйста, выберите страницу слева для загрузки модулей.",
     "Please type a few characters to create a new label.": "Введите несколько символов, чтобы создать новую метку.",
     "Please type a few characters to create a new tag.": "Введите несколько символов, чтобы создать новый тег.",
@@ -835,7 +835,7 @@
     "Setup Key": "Ключ настройки",
     "Setup Key:": "Ключ установки:",
     "Setup Telegram": "Настройка Телеграма",
-    "she\/her": "она\/ее",
+    "she/her": "она/ее",
     "Shintoist": "синтоист",
     "Show Calendar tab": "Показать вкладку «Календарь»",
     "Show Companies tab": "Показать вкладку «Компании»",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Хранилище создано.",
     "The vault has been deleted": "Хранилище удалено",
     "The vault have been updated": "Хранилище обновлено",
-    "they\/them": "они их",
+    "they/them": "они/их",
     "This address is not active anymore": "Этот адрес больше не активен",
     "This device": "Это устройство",
     "This email is a test email to check if Monica can send an email to this email address.": "Это электронное письмо является тестовым письмом, чтобы проверить, может ли Monica отправлять электронное письмо на этот адрес электронной почты.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Разархивировать контакт",
     "unarchived the contact": "разархивировал контакт",
     "Unauthorized": "Не авторизован",
-    "uncle\/aunt": "дядя тетя",
+    "uncle/aunt": "дядя/тетя",
     "Undefined": "Неопределенный",
     "Unexpected error on login.": "Неожиданная ошибка при входе в систему.",
     "Unknown": "Неизвестно",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Значение скопировано в буфер обмена.",
     "Vaults contain all your contacts data.": "Хранилища содержат все данные ваших контактов.",
     "Vault settings": "Настройки хранилища",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Письмо с подтверждением отправлено",
     "Verified": "Проверено",
     "Verify Email Address": "Подтвердить адрес электронной почты",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Если вам нужны десятичные дроби, напишите сумму через точку, например 100,50.",
     "Written on": "Написано",
     "wrote a note": "написал заметку",
-    "xe\/xem": "хе\/хем",
+    "xe/xem": "хе/хем",
     "year": "год",
     "Years": "Годы",
     "You are here:": "Вы здесь:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Вы можете изменить это в любое время.",
     "You can choose how you want Monica to display dates in the application.": "Вы можете выбрать, как Monica будет отображать даты в приложении.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Вы можете выбрать, какие валюты следует включить в вашем аккаунте, а какие нет.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Вы можете настроить отображение контактов в соответствии со своим вкусом\/культурой. Возможно, вы захотите использовать Джеймса Бонда вместо Бонда Джеймса. Здесь вы можете определить это по своему желанию.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Вы можете настроить отображение контактов в соответствии со своим вкусом/культурой. Возможно, вы захотите использовать Джеймса Бонда вместо Бонда Джеймса. Здесь вы можете определить это по своему желанию.",
     "You can customize the criteria that let you track your mood.": "Вы можете настроить критерии, позволяющие отслеживать ваше настроение.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Вы можете перемещать контакты между хранилищами. Это изменение происходит немедленно. Вы можете перемещать контакты только в хранилища, частью которых вы являетесь. Все данные контактов будут перемещены вместе с ним.",
     "You cannot remove your own administrator privilege.": "Вы не можете удалить свои права администратора.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Вы хотели напомнить о следующем:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Вам все равно придется удалить свою учетную запись в Monica или OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Вам было предложено использовать этот адрес электронной почты в Monica, персональной CRM с открытым исходным кодом, чтобы мы могли использовать его для отправки вам уведомлений.",
-    "ze\/hir": "зе\/хир",
+    "ze/hir": "зе/хир",
     "⚠️ Danger zone": "⚠️ Опасная зона",
     "🌳 Chalet": "🌳 Шале",
     "🏠 Secondary residence": "🏠 Второе место жительства",
