--- a/lang/sv.json
+++ b/lang/sv.json
@@ -220,7 +220,7 @@
     "boss": "chef",
     "Bought": "Köpt",
     "Breakdown of the current usage": "Uppdelning av den aktuella användningen",
-    "brother\/sister": "bror syster",
+    "brother/sister": "bror/syster",
     "Browser Sessions": "Webbläsarsessioner",
     "Buddhist": "buddhist",
     "Business": "Företag",
@@ -364,7 +364,7 @@
     "Delete the photo": "Ta bort fotot",
     "Delete the slice": "Ta bort skivan",
     "Delete the vault": "Ta bort valvet",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Ta bort ditt konto på https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Ta bort ditt konto på https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Att ta bort valvet innebär att ta bort all data inuti detta valv, för alltid. Det finns ingen återvändo. Var säker.",
     "Description": "Beskrivning",
     "Detail of a goal": "Detalj av ett mål",
@@ -478,7 +478,7 @@
     "Had a promotion": "Hade en befordran",
     "Hamster": "Hamster",
     "Have a great day,": "Ha en bra dag,",
-    "he\/him": "han honom",
+    "he/him": "han/honom",
     "Hello!": "Hej!",
     "Help": "Hjälp",
     "Hi :name": "Hej :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Påminnelsens namn",
     "Name of the reverse relationship": "Namn på det omvända förhållandet",
     "Nature of the call": "Typ av samtal",
-    "nephew\/niece": "brorson\/systerdotter",
+    "nephew/niece": "brorson/systerdotter",
     "New Password": "Nytt lösenord",
     "New to Monica?": "Ny hos Monica?",
     "Next": "Nästa",
@@ -696,7 +696,7 @@
     "Password": "Lösenord",
     "Payment Required": "Betalning krävs",
     "Pending Team Invitations": "Väntande Teaminbjudningar",
-    "per\/per": "per\/per",
+    "per/per": "per/per",
     "Permanently delete this team.": "Ta bort det här laget permanent.",
     "Permanently delete your account.": "Ta bort ditt konto permanent.",
     "Permission for :name": "Tillstånd för :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Vänligen ange kontakterna",
     "Please join Monica": "Gå med Monica",
     "Please provide the email address of the person you would like to add to this team.": "Ange e-postadressen till den person du vill lägga till i det här laget.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Läs vår <link>dokumentation<\/link> för att veta mer om den här funktionen och vilka variabler du har tillgång till.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Läs vår <link>dokumentation</link> för att veta mer om den här funktionen och vilka variabler du har tillgång till.",
     "Please select a page on the left to load modules.": "Välj en sida till vänster för att ladda moduler.",
     "Please type a few characters to create a new label.": "Skriv några tecken för att skapa en ny etikett.",
     "Please type a few characters to create a new tag.": "Skriv några tecken för att skapa en ny tagg.",
@@ -835,7 +835,7 @@
     "Setup Key": "Inställningsnyckel",
     "Setup Key:": "Inställningsnyckel:",
     "Setup Telegram": "Ställ in telegram",
-    "she\/her": "hon hennes",
+    "she/her": "hon/hennes",
     "Shintoist": "Shintoist",
     "Show Calendar tab": "Visa kalenderfliken",
     "Show Companies tab": "Visa företagsfliken",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Valvet har skapats",
     "The vault has been deleted": "Valvet har raderats",
     "The vault have been updated": "Valvet har uppdaterats",
-    "they\/them": "de dem",
+    "they/them": "de/dem",
     "This address is not active anymore": "Denna adress är inte aktiv längre",
     "This device": "Denna enhet",
     "This email is a test email to check if Monica can send an email to this email address.": "Detta e-postmeddelande är ett testmeddelande för att kontrollera om Monica kan skicka ett e-postmeddelande till denna e-postadress.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Avarkivera kontakt",
     "unarchived the contact": "har avarkiverat kontakten",
     "Unauthorized": "Obehörig",
-    "uncle\/aunt": "farbror faster",
+    "uncle/aunt": "farbror/faster",
     "Undefined": "Odefinierad",
     "Unexpected error on login.": "Oväntat fel vid inloggning.",
     "Unknown": "Okänd",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Värdet har kopierats till ditt urklipp",
     "Vaults contain all your contacts data.": "Valv innehåller alla dina kontaktuppgifter.",
     "Vault settings": "Valvinställningar",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Verifieringsmail har skickats",
     "Verified": "Verifierad",
     "Verify Email Address": "Bekräfta e-postadress",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Skriv beloppet med en prick om du behöver decimaler, som 100,50",
     "Written on": "Skrivet på",
     "wrote a note": "skrev en lapp",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "år",
     "Years": "år",
     "You are here:": "Du är här:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Du kan ändra det när som helst.",
     "You can choose how you want Monica to display dates in the application.": "Du kan välja hur du vill att Monica ska visa datum i applikationen.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Du kan välja vilka valutor som ska aktiveras på ditt konto och vilken som inte ska.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan anpassa hur kontakter ska visas efter din egen smak\/kultur. Du kanske skulle vilja använda James Bond istället för Bond James. Här kan du definiera det efter behag.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Du kan anpassa hur kontakter ska visas efter din egen smak/kultur. Du kanske skulle vilja använda James Bond istället för Bond James. Här kan du definiera det efter behag.",
     "You can customize the criteria that let you track your mood.": "Du kan anpassa kriterierna som låter dig spåra ditt humör.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Du kan flytta kontakter mellan valven. Denna förändring är omedelbar. Du kan bara flytta kontakter till valv som du är en del av. All kontaktinformation kommer att flyttas med den.",
     "You cannot remove your own administrator privilege.": "Du kan inte ta bort din egen administratörsbehörighet.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Du ville bli påmind om följande:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Du KOMMER fortfarande att behöva ta bort ditt konto på Monica eller OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Du har blivit inbjuden att använda den här e-postadressen i Monica, ett personligt CRM med öppen källkod, så att vi kan använda den för att skicka meddelanden till dig.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Riskområde",
     "🌳 Chalet": "🌳 Chalet",
     "🏠 Secondary residence": "🏠 Sekundärbostad",
