--- a/lang/te.json
+++ b/lang/te.json
@@ -220,7 +220,7 @@
     "boss": "బాస్",
     "Bought": "కొన్నారు",
     "Breakdown of the current usage": "ప్రస్తుత వినియోగం యొక్క విభజన",
-    "brother\/sister": "సోదరుడు \/ సోదరి",
+    "brother/sister": "సోదరుడు / సోదరి",
     "Browser Sessions": "బ్రౌజర్ సెషన్లు",
     "Buddhist": "బౌద్ధుడు",
     "Business": "వ్యాపారం",
@@ -364,7 +364,7 @@
     "Delete the photo": "ఫోటోను తొలగించండి",
     "Delete the slice": "ముక్కను తొలగించండి",
     "Delete the vault": "ఖజానాను తొలగించండి",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com వద్ద మీ ఖాతాను తొలగించండి.",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com వద్ద మీ ఖాతాను తొలగించండి.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "ఖజానాను తొలగించడం అంటే ఈ ఖజానాలోని మొత్తం డేటాను శాశ్వతంగా తొలగించడం. వెనక్కి తగ్గేది లేదు. దయచేసి ఖచ్చితంగా ఉండండి.",
     "Description": "వివరణ",
     "Detail of a goal": "ఒక లక్ష్యం యొక్క వివరాలు",
@@ -479,7 +479,7 @@
     "Had a promotion": "ప్రమోషన్ వచ్చింది",
     "Hamster": "చిట్టెలుక",
     "Have a great day,": "ఈ రోజు మీకు కుశలంగా ఉండును,",
-    "he\/him": "అతను\/అతడు",
+    "he/him": "అతను/అతడు",
     "Hello!": "హలో!",
     "Help": "సహాయం",
     "Hi :name": "హాయ్ :name",
@@ -639,7 +639,7 @@
     "Name of the reminder": "రిమైండర్ పేరు",
     "Name of the reverse relationship": "రివర్స్ సంబంధం పేరు",
     "Nature of the call": "కాల్ యొక్క స్వభావం",
-    "nephew\/niece": "మేనల్లుడు మేనకోడలు",
+    "nephew/niece": "మేనల్లుడు/మేనకోడలు",
     "New Password": "కొత్త పాస్వర్డ్",
     "New to Monica?": "Monica కొత్త?",
     "Next": "తరువాత",
@@ -697,7 +697,7 @@
     "Password": "పాస్వర్డ్",
     "Payment Required": "చెల్లింపు అవసరం",
     "Pending Team Invitations": "పెండింగ్‌లో ఉన్న టీమ్ ఆహ్వానాలు",
-    "per\/per": "ప్రతి\/ప్రతి",
+    "per/per": "ప్రతి/ప్రతి",
     "Permanently delete this team.": "ఈ బృందాన్ని శాశ్వతంగా తొలగించండి.",
     "Permanently delete your account.": "మీ ఖాతాను శాశ్వతంగా తొలగించండి.",
     "Permission for :name": ":name కోసం అనుమతి",
@@ -730,7 +730,7 @@
     "Please indicate the contacts": "దయచేసి పరిచయాలను సూచించండి",
     "Please join Monica": "దయచేసి Monica చేరండి",
     "Please provide the email address of the person you would like to add to this team.": "దయచేసి మీరు ఈ బృందానికి జోడించాలనుకుంటున్న వ్యక్తి యొక్క ఇమెయిల్ చిరునామాను అందించండి.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "దయచేసి ఈ ఫీచర్ గురించి మరింత తెలుసుకోవడానికి మా <link>డాక్యుమెంటేషన్<\/link> చదవండి మరియు మీరు ఏ వేరియబుల్స్‌కు యాక్సెస్ కలిగి ఉన్నారు.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "దయచేసి ఈ ఫీచర్ గురించి మరింత తెలుసుకోవడానికి మా <link>డాక్యుమెంటేషన్</link> చదవండి మరియు మీరు ఏ వేరియబుల్స్‌కు యాక్సెస్ కలిగి ఉన్నారు.",
     "Please select a page on the left to load modules.": "దయచేసి మాడ్యూల్‌లను లోడ్ చేయడానికి ఎడమ వైపున ఉన్న పేజీని ఎంచుకోండి.",
     "Please type a few characters to create a new label.": "దయచేసి కొత్త లేబుల్‌ని సృష్టించడానికి కొన్ని అక్షరాలను టైప్ చేయండి.",
     "Please type a few characters to create a new tag.": "దయచేసి కొత్త ట్యాగ్‌ని సృష్టించడానికి కొన్ని అక్షరాలను టైప్ చేయండి.",
@@ -836,7 +836,7 @@
     "Setup Key": "సెటప్ కీ",
     "Setup Key:": "సెటప్ కీ:",
     "Setup Telegram": "టెలిగ్రామ్‌ని సెటప్ చేయండి",
-    "she\/her": "ఆమె\/ఆమె",
+    "she/her": "ఆమె/ఆమె",
     "Shintoist": "షింటోయిస్ట్",
     "Show Calendar tab": "క్యాలెండర్ ట్యాబ్‌ను చూపించు",
     "Show Companies tab": "కంపెనీల ట్యాబ్‌ను చూపు",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "ఖజానా సృష్టించబడింది",
     "The vault has been deleted": "ఖజానా తొలగించబడింది",
     "The vault have been updated": "ఖజానా నవీకరించబడింది",
-    "they\/them": "వారు\/వారు",
+    "they/them": "వారు/వారు",
     "This address is not active anymore": "ఈ చిరునామా ఇప్పుడు సక్రియంగా లేదు",
     "This device": "ఈ పరికరం",
     "This email is a test email to check if Monica can send an email to this email address.": "Monica ఈ ఇమెయిల్ చిరునామాకు ఇమెయిల్ పంపగలదో లేదో తనిఖీ చేయడానికి ఈ ఇమెయిల్ పరీక్ష ఇమెయిల్.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "పరిచయాన్ని అన్‌ఆర్కైవ్ చేయండి",
     "unarchived the contact": "పరిచయాన్ని అన్‌ఆర్కైవ్ చేసారు",
     "Unauthorized": "అనధికారమైనది",
-    "uncle\/aunt": "మామ, అత్త",
+    "uncle/aunt": "మామ,/అత్త",
     "Undefined": "నిర్వచించబడలేదు",
     "Unexpected error on login.": "లాగిన్‌లో ఊహించని లోపం.",
     "Unknown": "తెలియదు",
@@ -1161,7 +1161,7 @@
     "Value copied into your clipboard": "విలువ మీ క్లిప్‌బోర్డ్‌లోకి కాపీ చేయబడింది",
     "Vaults contain all your contacts data.": "వాల్ట్‌లు మీ పరిచయాల డేటా మొత్తాన్ని కలిగి ఉంటాయి.",
     "Vault settings": "వాల్ట్ సెట్టింగ్‌లు",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "ధృవీకరణ ఇమెయిల్ పంపబడింది",
     "Verified": "ధృవీకరించబడింది",
     "Verify Email Address": "ఇమెయిల్ చిరునామాను ధృవీకరించండి",
@@ -1221,7 +1221,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "మీకు 100.50 వంటి దశాంశాలు అవసరమైతే చుక్కతో మొత్తాన్ని వ్రాయండి",
     "Written on": "న వ్రాయబడింది",
     "wrote a note": "ఒక నోట్ రాశారు",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "సంవత్సరం",
     "Years": "సంవత్సరాలు",
     "You are here:": "నువ్వు ఇక్కడ ఉన్నావు:",
@@ -1235,7 +1235,7 @@
     "You can change that at any time.": "మీరు దీన్ని ఎప్పుడైనా మార్చవచ్చు.",
     "You can choose how you want Monica to display dates in the application.": "అప్లికేషన్‌లో Monica తేదీలను ఎలా ప్రదర్శించాలో మీరు ఎంచుకోవచ్చు.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "మీ ఖాతాలో ఏ కరెన్సీలను ప్రారంభించాలి మరియు ఏది చేయకూడదో మీరు ఎంచుకోవచ్చు.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "మీ స్వంత అభిరుచి\/సంస్కృతికి అనుగుణంగా పరిచయాలు ఎలా ప్రదర్శించబడాలో మీరు అనుకూలీకరించవచ్చు. బహుశా మీరు బాండ్ జేమ్స్‌కు బదులుగా జేమ్స్ బాండ్‌ని ఉపయోగించాలనుకోవచ్చు. ఇక్కడ, మీరు దానిని ఇష్టానుసారంగా నిర్వచించవచ్చు.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "మీ స్వంత అభిరుచి/సంస్కృతికి అనుగుణంగా పరిచయాలు ఎలా ప్రదర్శించబడాలో మీరు అనుకూలీకరించవచ్చు. బహుశా మీరు బాండ్ జేమ్స్‌కు బదులుగా జేమ్స్ బాండ్‌ని ఉపయోగించాలనుకోవచ్చు. ఇక్కడ, మీరు దానిని ఇష్టానుసారంగా నిర్వచించవచ్చు.",
     "You can customize the criteria that let you track your mood.": "మీ మానసిక స్థితిని ట్రాక్ చేయడానికి మిమ్మల్ని అనుమతించే ప్రమాణాలను మీరు అనుకూలీకరించవచ్చు.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "మీరు వాల్ట్‌ల మధ్య పరిచయాలను తరలించవచ్చు. ఈ మార్పు తక్షణమే. మీరు భాగమైన వాల్ట్‌లకు మాత్రమే మీరు పరిచయాలను తరలించగలరు. అన్ని పరిచయాల డేటా దానితో తరలించబడుతుంది.",
     "You cannot remove your own administrator privilege.": "మీరు మీ స్వంత నిర్వాహక అధికారాన్ని తీసివేయలేరు.",
@@ -1269,7 +1269,7 @@
     "You wanted to be reminded of the following:": "మీరు ఈ క్రింది వాటిని గుర్తు చేయాలనుకుంటున్నారు:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "మీరు ఇప్పటికీ Monica లేదా OfficeLifeలో మీ ఖాతాను తొలగించవలసి ఉంటుంది.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "ఓపెన్ సోర్స్ వ్యక్తిగత CRM అయిన Monica ఈ ఇమెయిల్ చిరునామాను ఉపయోగించడానికి మీరు ఆహ్వానించబడ్డారు, కాబట్టి మేము మీకు నోటిఫికేషన్‌లను పంపడానికి దీన్ని ఉపయోగించవచ్చు.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ డేంజర్ జోన్",
     "🌳 Chalet": "🌳 చాలెట్",
     "🏠 Secondary residence": "🏠 ద్వితీయ నివాసం",
