--- a/lang/tr.json
+++ b/lang/tr.json
@@ -220,7 +220,7 @@
     "boss": "patron",
     "Bought": "Satın alınmış",
     "Breakdown of the current usage": "Mevcut kullanımın dökümü",
-    "brother\/sister": "erkek kardeş\/kız kardeş",
+    "brother/sister": "erkek kardeş/kız kardeş",
     "Browser Sessions": "Tarayıcı Oturumları",
     "Buddhist": "Budist",
     "Business": "İşletme",
@@ -364,7 +364,7 @@
     "Delete the photo": "Fotoğrafı sil",
     "Delete the slice": "Dilimi sil",
     "Delete the vault": "Kasayı sil",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com adresindeki hesabınızı silin.",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com adresindeki hesabınızı silin.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Kasanın silinmesi, bu kasanın içindeki tüm verilerin kalıcı olarak silinmesi anlamına gelir. Geri dönüş yok. Lütfen emin olun.",
     "Description": "Tanım",
     "Detail of a goal": "Bir hedefin detayı",
@@ -478,7 +478,7 @@
     "Had a promotion": "Promosyon vardı",
     "Hamster": "Hamster",
     "Have a great day,": "İyi günler,",
-    "he\/him": "o \/ o",
+    "he/him": "o / o",
     "Hello!": "Merhaba!",
     "Help": "Yardım",
     "Hi :name": "Merhaba :name",
@@ -499,7 +499,7 @@
     "How should we display distance values": "Mesafe değerlerini nasıl göstermeliyiz?",
     "How should we display numerical values": "Sayısal değerleri nasıl göstermeliyiz?",
     "I agree to the :terms and :policy": ":terms ve :policy’yi kabul ediyorum",
-    "I agree to the :terms_of_service and :privacy_policy": ":Terms_of_service ve :privacy_policy'yi kabul ediyorum",
+    "I agree to the :terms_of_service and :privacy_policy": ":Terms_of_service ve :privacy_policy’yi kabul ediyorum",
     "I am grateful for": "için müteşekkirim",
     "I called": "aradım",
     "I called, but :name didn’t answer": "Aradım ama :name yanıt vermedi",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Hatırlatıcının adı",
     "Name of the reverse relationship": "Ters ilişkinin adı",
     "Nature of the call": "Çağrının niteliği",
-    "nephew\/niece": "yeğen\/yeğen",
+    "nephew/niece": "yeğen/yeğen",
     "New Password": "Yeni Parola",
     "New to Monica?": "Monica’da yeni misin?",
     "Next": "Sonraki",
@@ -696,7 +696,7 @@
     "Password": "Parola",
     "Payment Required": "ödeme gerekli",
     "Pending Team Invitations": "Bekleyen Ekip Davetiyeleri",
-    "per\/per": "başına\/başına",
+    "per/per": "başına/başına",
     "Permanently delete this team.": "Bu ekibi kalıcı olarak sil",
     "Permanently delete your account.": "Hesabını kalıcı olarak sil",
     "Permission for :name": ":name için izin",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Lütfen kişileri belirtin",
     "Please join Monica": "Lütfen Monica’ya katılın",
     "Please provide the email address of the person you would like to add to this team.": "Lütfen bu ekibe eklemek istediğiniz kişinin e-posta adresini belirtin.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Bu özellik ve hangi değişkenlere erişebildiğiniz hakkında daha fazla bilgi edinmek için lütfen <link>belgelerimizi<\/link> okuyun.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Bu özellik ve hangi değişkenlere erişebildiğiniz hakkında daha fazla bilgi edinmek için lütfen <link>belgelerimizi</link> okuyun.",
     "Please select a page on the left to load modules.": "Modülleri yüklemek için lütfen soldan bir sayfa seçin.",
     "Please type a few characters to create a new label.": "Yeni bir etiket oluşturmak için lütfen birkaç karakter yazın.",
     "Please type a few characters to create a new tag.": "Yeni bir etiket oluşturmak için lütfen birkaç karakter yazın.",
@@ -835,7 +835,7 @@
     "Setup Key": "Kurulum Anahtarı",
     "Setup Key:": "Kurulum Anahtarı:",
     "Setup Telegram": "Telegram’ı Kur",
-    "she\/her": "o",
+    "she/her": "o",
     "Shintoist": "Şintoist",
     "Show Calendar tab": "Takvim sekmesini göster",
     "Show Companies tab": "Şirketler sekmesini göster",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Kasa oluşturuldu",
     "The vault has been deleted": "Kasa silindi",
     "The vault have been updated": "Kasa güncellendi",
-    "they\/them": "onlar \/ onlar",
+    "they/them": "onlar / onlar",
     "This address is not active anymore": "Bu adres artık aktif değil",
     "This device": "Bu cihaz",
     "This email is a test email to check if Monica can send an email to this email address.": "Bu e-posta, Monica’nın bu e-posta adresine e-posta gönderip gönderemeyeceğini kontrol etmek için kullanılan bir test e-postasıdır.",
@@ -1096,7 +1096,7 @@
     "to": "a",
     "To finish enabling two factor authentication, scan the following QR code using your phone's authenticator application or enter the setup key and provide the generated OTP code.": "İki faktörlü kimlik doğrulamayı etkinleştirmeyi tamamlamak için telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin ve oluşturulan OTP kodunu sağlayın.",
     "To finish enabling two factor authentication, scan the following QR code using your phone’s authenticator application or enter the setup key and provide the generated OTP code.": "İki faktörlü kimlik doğrulamayı etkinleştirmeyi tamamlamak için telefonunuzun kimlik doğrulama uygulamasını kullanarak aşağıdaki QR kodunu tarayın veya kurulum anahtarını girin ve oluşturulan OTP kodunu girin.",
-    "Toggle navigation": "Menüyü Aç\/Kapat",
+    "Toggle navigation": "Menüyü Aç/Kapat",
     "To hear their story": "Hikayelerini dinlemek için",
     "Token Name": "Jeton İsmi",
     "Token name (for your reference only)": "Belirteç adı (yalnızca referans amaçlı)",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Kişiyi arşivden çıkar",
     "unarchived the contact": "kişiyi arşivden çıkardı",
     "Unauthorized": "İzinsiz",
-    "uncle\/aunt": "amca hala",
+    "uncle/aunt": "amca/hala",
     "Undefined": "Tanımsız",
     "Unexpected error on login.": "Oturum açma sırasında beklenmeyen hata.",
     "Unknown": "Bilinmeyen",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Değer panonuza kopyalandı",
     "Vaults contain all your contacts data.": "Kasalar tüm kişi verilerinizi içerir.",
     "Vault settings": "Kasa ayarları",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "Doğrulama e-postası gönderildi",
     "Verified": "Doğrulandı",
     "Verify Email Address": "E-posta Adresini Doğrula",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "100,50 gibi ondalık sayılara ihtiyacınız varsa tutarı nokta ile yazın",
     "Written on": "Üzerine yazılmış",
     "wrote a note": "bir not yazdı",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "yıl",
     "Years": "Yıllar",
     "You are here:": "Buradasınız:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Bunu istediğiniz zaman değiştirebilirsiniz.",
     "You can choose how you want Monica to display dates in the application.": "Monica’nın uygulamada tarihleri nasıl görüntülemesini istediğinizi seçebilirsiniz.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Hesabınızda hangi para birimlerinin etkinleştirileceğini ve hangisinin etkinleştirilmeyeceğini seçebilirsiniz.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Kişilerin nasıl görüntülenmesi gerektiğini kendi zevkinize\/kültürünüze göre özelleştirebilirsiniz. Belki Bond James yerine James Bond’u kullanmak istersiniz. Burada dilediğiniz gibi tanımlayabilirsiniz.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Kişilerin nasıl görüntülenmesi gerektiğini kendi zevkinize/kültürünüze göre özelleştirebilirsiniz. Belki Bond James yerine James Bond’u kullanmak istersiniz. Burada dilediğiniz gibi tanımlayabilirsiniz.",
     "You can customize the criteria that let you track your mood.": "Ruh halinizi takip etmenize olanak tanıyan kriterleri özelleştirebilirsiniz.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Kişileri kasalar arasında taşıyabilirsiniz. Bu değişiklik anında gerçekleşir. Kişileri yalnızca parçası olduğunuz kasalara taşıyabilirsiniz. Tüm kişi verileri onunla birlikte taşınacaktır.",
     "You cannot remove your own administrator privilege.": "Kendi yönetici ayrıcalığınızı kaldıramazsınız.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Aşağıdakilerin hatırlatılmasını istediniz:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Monica veya OfficeLife’daki hesabınızı yine de silmeniz gerekecek.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Bu e-posta adresini açık kaynaklı bir kişisel CRM olan Monica’da kullanmaya davet edildiniz, böylece size bildirim göndermek için kullanabiliriz.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Tehlikeli bölge",
     "🌳 Chalet": "🌳 Dağ evi",
     "🏠 Secondary residence": "🏠 İkincil ikamet",
