--- a/lang/ur.json
+++ b/lang/ur.json
@@ -220,7 +220,7 @@
     "boss": "باس",
     "Bought": "خریدا",
     "Breakdown of the current usage": "موجودہ استعمال کی خرابی۔",
-    "brother\/sister": "بھائی بہن",
+    "brother/sister": "بھائی/بہن",
     "Browser Sessions": "براؤزر کے سیشن",
     "Buddhist": "بدھسٹ",
     "Business": "کاروبار",
@@ -364,7 +364,7 @@
     "Delete the photo": "تصویر کو حذف کریں۔",
     "Delete the slice": "ٹکڑا حذف کریں۔",
     "Delete the vault": "والٹ کو حذف کریں۔",
-    "Delete your account on https:\/\/customers.monicahq.com.": "https:\/\/customers.monicahq.com پر اپنا اکاؤنٹ حذف کریں۔",
+    "Delete your account on https://customers.monicahq.com.": "https://customers.monicahq.com پر اپنا اکاؤنٹ حذف کریں۔",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "والٹ کو حذف کرنے کا مطلب ہے کہ اس والٹ کے اندر موجود تمام ڈیٹا کو ہمیشہ کے لیے حذف کر دیا جائے۔ پیچھے مڑنے کی کوئی صورت نہیں ہے۔ براہ کرم یقین رکھیں۔",
     "Description": "تفصیل",
     "Detail of a goal": "مقصد کی تفصیل",
@@ -478,7 +478,7 @@
     "Had a promotion": "پروموشن ہوا تھا۔",
     "Hamster": "ہیمسٹر",
     "Have a great day,": "آپ کا دن اچھا گزرے،",
-    "he\/him": "وہ\/وہ",
+    "he/him": "وہ/وہ",
     "Hello!": "ہیلو!",
     "Help": "مدد",
     "Hi :name": "ہیلو :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "یاد دہانی کا نام",
     "Name of the reverse relationship": "معکوس تعلق کا نام",
     "Nature of the call": "کال کی نوعیت",
-    "nephew\/niece": "بھتیجا بھتیجی",
+    "nephew/niece": "بھتیجا/بھتیجی",
     "New Password": "نیا پاس ورڈ",
     "New to Monica?": "Monica کے لیے نئے ہیں؟",
     "Next": "اگلے",
@@ -696,7 +696,7 @@
     "Password": "پاس ورڈ",
     "Payment Required": "ادائیگی کی ضرورت ہے۔",
     "Pending Team Invitations": "زیر التواء ٹیم کے دعوت نامے",
-    "per\/per": "فی فی",
+    "per/per": "فی/فی",
     "Permanently delete this team.": "مستقل طور پر خارج کر دیں اس کی ٹیم.",
     "Permanently delete your account.": "مستقل طور پر آپ کے اکاؤنٹ کو خارج.",
     "Permission for :name": ":name کے لیے اجازت",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "براہ کرم رابطوں کی نشاندہی کریں۔",
     "Please join Monica": "براہ کرم Monica میں شامل ہوں۔",
     "Please provide the email address of the person you would like to add to this team.": "فراہم کریں ای میل ایڈریس کا شخص آپ کو پسند کرے گا کرنے کے لئے شامل کرنے کے لئے اس کی ٹیم.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "اس خصوصیت کے بارے میں مزید جاننے کے لیے براہ کرم ہماری <link>دستاویزات<\/link> پڑھیں، اور آپ کو کن متغیرات تک رسائی حاصل ہے۔",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "اس خصوصیت کے بارے میں مزید جاننے کے لیے براہ کرم ہماری <link>دستاویزات</link> پڑھیں، اور آپ کو کن متغیرات تک رسائی حاصل ہے۔",
     "Please select a page on the left to load modules.": "براہ کرم ماڈیول لوڈ کرنے کے لیے بائیں جانب ایک صفحہ منتخب کریں۔",
     "Please type a few characters to create a new label.": "نیا لیبل بنانے کے لیے براہ کرم چند حروف ٹائپ کریں۔",
     "Please type a few characters to create a new tag.": "نیا ٹیگ بنانے کے لیے براہ کرم چند حروف ٹائپ کریں۔",
@@ -835,7 +835,7 @@
     "Setup Key": "سیٹ اپ کلید",
     "Setup Key:": "سیٹ اپ کلید:",
     "Setup Telegram": "ٹیلیگرام سیٹ اپ کریں۔",
-    "she\/her": "وہ\/وہ",
+    "she/her": "وہ/وہ",
     "Shintoist": "شنٹوسٹ",
     "Show Calendar tab": "کیلنڈر ٹیب دکھائیں۔",
     "Show Companies tab": "کمپنیز ٹیب دکھائیں۔",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "والٹ بنایا گیا ہے۔",
     "The vault has been deleted": "والٹ کو حذف کر دیا گیا ہے۔",
     "The vault have been updated": "والٹ کو اپ ڈیٹ کر دیا گیا ہے۔",
-    "they\/them": "وہ انہیں",
+    "they/them": "وہ/انہیں",
     "This address is not active anymore": "یہ پتہ اب فعال نہیں ہے۔",
     "This device": "یہ آلہ",
     "This email is a test email to check if Monica can send an email to this email address.": "یہ ای میل ایک آزمائشی ای میل ہے کہ آیا Monica اس ای میل پتے پر ای میل بھیج سکتی ہے۔",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "رابطہ کو غیر محفوظ کریں۔",
     "unarchived the contact": "رابطہ کو غیر محفوظ کر دیا گیا۔",
     "Unauthorized": "غیر مجاز",
-    "uncle\/aunt": "چچا چاچی",
+    "uncle/aunt": "چچا/چاچی",
     "Undefined": "غیر متعینہ",
     "Unexpected error on login.": "لاگ ان پر غیر متوقع خرابی۔",
     "Unknown": "نامعلوم",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "قدر آپ کے کلپ بورڈ میں کاپی ہو گئی۔",
     "Vaults contain all your contacts data.": "والٹس میں آپ کے تمام رابطوں کا ڈیٹا ہوتا ہے۔",
     "Vault settings": "والٹ کی ترتیبات",
-    "ve\/ver": "ve\/ver",
+    "ve/ver": "ve/ver",
     "Verification email sent": "تصدیقی ای میل بھیجی گئی۔",
     "Verified": "تصدیق شدہ",
     "Verify Email Address": "ای میل ایڈریس کی تصدیق کریں",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "اگر آپ کو اعشاریہ کی ضرورت ہو تو ڈاٹ کے ساتھ رقم لکھیں، جیسے 100.50",
     "Written on": "پر لکھا گیا۔",
     "wrote a note": "ایک نوٹ لکھا",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "سال",
     "Years": "سال",
     "You are here:": "آپ یہاں ہیں:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "آپ اسے کسی بھی وقت تبدیل کر سکتے ہیں۔",
     "You can choose how you want Monica to display dates in the application.": "آپ انتخاب کر سکتے ہیں کہ آپ Monica کو درخواست میں تاریخیں کیسے دکھانا چاہتے ہیں۔",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "آپ انتخاب کر سکتے ہیں کہ آپ کے اکاؤنٹ میں کون سی کرنسیوں کو فعال کیا جانا چاہیے، اور کون سی نہیں۔",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "آپ اپنی مرضی کے مطابق کر سکتے ہیں کہ آپ کے اپنے ذائقہ\/ثقافت کے مطابق رابطوں کو کیسے ظاہر کیا جانا چاہیے۔ شاید آپ بانڈ جیمز کے بجائے جیمز بانڈ استعمال کرنا چاہیں گے۔ یہاں، آپ اپنی مرضی سے اس کی تعریف کر سکتے ہیں۔",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "آپ اپنی مرضی کے مطابق کر سکتے ہیں کہ آپ کے اپنے ذائقہ/ثقافت کے مطابق رابطوں کو کیسے ظاہر کیا جانا چاہیے۔ شاید آپ بانڈ جیمز کے بجائے جیمز بانڈ استعمال کرنا چاہیں گے۔ یہاں، آپ اپنی مرضی سے اس کی تعریف کر سکتے ہیں۔",
     "You can customize the criteria that let you track your mood.": "آپ اس معیار کو اپنی مرضی کے مطابق بنا سکتے ہیں جو آپ کو اپنے موڈ کو ٹریک کرنے دیتا ہے۔",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "آپ رابطوں کو والٹ کے درمیان منتقل کر سکتے ہیں۔ یہ تبدیلی فوری ہے۔ آپ رابطوں کو صرف ان والٹس میں منتقل کر سکتے ہیں جن کا آپ حصہ ہیں۔ تمام رابطوں کا ڈیٹا اس کے ساتھ منتقل ہو جائے گا۔",
     "You cannot remove your own administrator privilege.": "آپ اپنے ایڈمنسٹریٹر کے استحقاق کو نہیں ہٹا سکتے۔",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "آپ مندرجہ ذیل کی یاد دلانا چاہتے تھے:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "آپ کو اب بھی Monica یا آفس لائف پر اپنا اکاؤنٹ حذف کرنا پڑے گا۔",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "آپ کو یہ ای میل ایڈریس Monica میں استعمال کرنے کے لیے مدعو کیا گیا ہے، جو ایک اوپن سورس ذاتی CRM ہے، لہذا ہم آپ کو اطلاعات بھیجنے کے لیے اس کا استعمال کر سکتے ہیں۔",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ خطرہ زون",
     "🌳 Chalet": "🌳 چیلیٹ",
     "🏠 Secondary residence": "🏠 ثانوی رہائش گاہ",
