--- a/lang/vi.json
+++ b/lang/vi.json
@@ -220,7 +220,7 @@
     "boss": "ông chủ",
     "Bought": "Mua",
     "Breakdown of the current usage": "Phân tích mức sử dụng hiện tại",
-    "brother\/sister": "anh chị em",
+    "brother/sister": "anh chị/em",
     "Browser Sessions": "Phiên làm việc Trình duyệt",
     "Buddhist": "Phật tử",
     "Business": "Việc kinh doanh",
@@ -364,7 +364,7 @@
     "Delete the photo": "Xóa ảnh",
     "Delete the slice": "Xóa lát cắt",
     "Delete the vault": "Xóa kho tiền",
-    "Delete your account on https:\/\/customers.monicahq.com.": "Xóa tài khoản của bạn trên https:\/\/customers.monicahq.com.",
+    "Delete your account on https://customers.monicahq.com.": "Xóa tài khoản của bạn trên https://customers.monicahq.com.",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "Xóa vault có nghĩa là xóa tất cả dữ liệu bên trong vault này mãi mãi. Không có quay trở lại. Xin hãy chắc chắn.",
     "Description": "Sự miêu tả",
     "Detail of a goal": "Chi tiết về một mục tiêu",
@@ -478,7 +478,7 @@
     "Had a promotion": "Đã có khuyến mãi",
     "Hamster": "chuột đồng",
     "Have a great day,": "Có một ngày tuyệt vời,",
-    "he\/him": "anh ấy \/ anh ấy",
+    "he/him": "anh ấy / anh ấy",
     "Hello!": "Xin chào!",
     "Help": "Giúp đỡ",
     "Hi :name": "Xin chào :name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "Tên nhắc nhở",
     "Name of the reverse relationship": "Tên của mối quan hệ ngược lại",
     "Nature of the call": "Bản chất của cuộc gọi",
-    "nephew\/niece": "cháu trai\/cháu gái",
+    "nephew/niece": "cháu trai/cháu gái",
     "New Password": "Mật khẩu mới",
     "New to Monica?": "Mới đối với Monica?",
     "Next": "Kế tiếp",
@@ -696,7 +696,7 @@
     "Password": "Mật khẩu",
     "Payment Required": "yêu cầu thanh toán",
     "Pending Team Invitations": "Lời Mời Của Nhóm Chờ Xử Lý",
-    "per\/per": "mỗi\/mỗi",
+    "per/per": "mỗi/mỗi",
     "Permanently delete this team.": "Xóa vĩnh viễn nhóm này.",
     "Permanently delete your account.": "Xóa vĩnh viễn tài khoản của bạn.",
     "Permission for :name": "Quyền dành cho :name",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "Hãy cho biết địa chỉ liên lạc",
     "Please join Monica": "Hãy tham gia cùng Monica",
     "Please provide the email address of the person you would like to add to this team.": "Vui lòng cung cấp địa chỉ email của người bạn muốn thêm vào nhóm này.",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "Vui lòng đọc <link>tài liệu<\/link> của chúng tôi để biết thêm về tính năng này và những biến bạn có quyền truy cập.",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "Vui lòng đọc <link>tài liệu</link> của chúng tôi để biết thêm về tính năng này và những biến bạn có quyền truy cập.",
     "Please select a page on the left to load modules.": "Vui lòng chọn một trang ở bên trái để tải các mô-đun.",
     "Please type a few characters to create a new label.": "Vui lòng nhập một vài ký tự để tạo nhãn mới.",
     "Please type a few characters to create a new tag.": "Vui lòng nhập một vài ký tự để tạo thẻ mới.",
@@ -835,7 +835,7 @@
     "Setup Key": "Khoá Thiết Lập",
     "Setup Key:": "Khóa cài đặt:",
     "Setup Telegram": "Thiết lập Telegram",
-    "she\/her": "cô ấy\/cô ấy",
+    "she/her": "cô ấy/cô ấy",
     "Shintoist": "Thần đạo",
     "Show Calendar tab": "Hiển thị tab Lịch",
     "Show Companies tab": "Hiển thị tab Công ty",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "Vault đã được tạo",
     "The vault has been deleted": "Kho tiền đã bị xóa",
     "The vault have been updated": "Kho tiền đã được cập nhật",
-    "they\/them": "họ \/ họ",
+    "they/them": "họ / họ",
     "This address is not active anymore": "Địa chỉ này không còn hoạt động nữa",
     "This device": "Thiết bị hiện tại",
     "This email is a test email to check if Monica can send an email to this email address.": "Email này là email thử nghiệm để kiểm tra xem Monica có thể gửi email đến địa chỉ email này hay không.",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "Hủy lưu trữ liên hệ",
     "unarchived the contact": "đã hủy lưu trữ liên hệ",
     "Unauthorized": "Không Được Phép",
-    "uncle\/aunt": "chú\/dì",
+    "uncle/aunt": "chú/dì",
     "Undefined": "Không xác định",
     "Unexpected error on login.": "Lỗi không mong muốn khi đăng nhập.",
     "Unknown": "Không Xác Định",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "Giá trị được sao chép vào khay nhớ tạm của bạn",
     "Vaults contain all your contacts data.": "Vault chứa tất cả dữ liệu liên hệ của bạn.",
     "Vault settings": "Cài đặt vault",
-    "ve\/ver": "đã\/ver",
+    "ve/ver": "đã/ver",
     "Verification email sent": "Gửi email xác minh",
     "Verified": "Đã xác minh",
     "Verify Email Address": "Xác Minh Địa Chỉ Email",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "Viết số bằng dấu chấm nếu bạn cần số thập phân, như 100,50",
     "Written on": "Được viết trên",
     "wrote a note": "đã viết một ghi chú",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "năm",
     "Years": "Năm",
     "You are here:": "Bạn đang ở đây:",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "Bạn có thể thay đổi điều đó bất cứ lúc nào.",
     "You can choose how you want Monica to display dates in the application.": "Bạn có thể chọn cách bạn muốn Monica hiển thị ngày tháng trong ứng dụng.",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "Bạn có thể chọn loại tiền tệ nào sẽ được kích hoạt trong tài khoản của mình và loại tiền tệ nào không nên kích hoạt.",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Bạn có thể tùy chỉnh cách hiển thị danh bạ theo sở thích\/văn hóa của riêng bạn. Có lẽ bạn sẽ muốn sử dụng James Bond thay vì Bond James. Ở đây, bạn có thể xác định nó theo ý muốn.",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "Bạn có thể tùy chỉnh cách hiển thị danh bạ theo sở thích/văn hóa của riêng bạn. Có lẽ bạn sẽ muốn sử dụng James Bond thay vì Bond James. Ở đây, bạn có thể xác định nó theo ý muốn.",
     "You can customize the criteria that let you track your mood.": "Bạn có thể tùy chỉnh các tiêu chí cho phép bạn theo dõi tâm trạng của mình.",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "Bạn có thể di chuyển danh bạ giữa các vault. Sự thay đổi này là ngay lập tức. Bạn chỉ có thể di chuyển danh bạ tới vault mà bạn là thành viên. Tất cả dữ liệu danh bạ sẽ di chuyển cùng với nó.",
     "You cannot remove your own administrator privilege.": "Bạn không thể loại bỏ đặc quyền quản trị viên của riêng bạn.",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "Bạn muốn được nhắc nhở về những điều sau:",
     "You WILL still have to delete your account on Monica or OfficeLife.": "Bạn SẼ vẫn phải xóa tài khoản của mình trên Monica hoặc OfficeLife.",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "Bạn đã được mời sử dụng địa chỉ email này ở Monica, một CRM cá nhân nguồn mở để chúng tôi có thể sử dụng địa chỉ này để gửi thông báo cho bạn.",
-    "ze\/hir": "ze\/hir",
+    "ze/hir": "ze/hir",
     "⚠️ Danger zone": "⚠️ Vùng nguy hiểm",
     "🌳 Chalet": "🌳 Nhà gỗ",
     "🏠 Secondary residence": "🏠 Nơi ở thứ hai",
