--- a/lang/zh-CN.json
+++ b/lang/zh-CN.json
@@ -220,7 +220,7 @@
     "boss": "老板",
     "Bought": "买",
     "Breakdown of the current usage": "当前使用情况细分",
-    "brother\/sister": "兄弟姐妹",
+    "brother/sister": "兄弟姐妹",
     "Browser Sessions": "浏览器会话",
     "Buddhist": "佛教徒",
     "Business": "商业",
@@ -364,7 +364,7 @@
     "Delete the photo": "删除照片",
     "Delete the slice": "删除切片",
     "Delete the vault": "删除保管库",
-    "Delete your account on https:\/\/customers.monicahq.com.": "删除您在 https:\/\/customers.monicahq.com 上的帐户。",
+    "Delete your account on https://customers.monicahq.com.": "删除您在 https://customers.monicahq.com 上的帐户。",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "删除保管库意味着永久删除该保管库内的所有数据。没有回头路。请一定。",
     "Description": "描述",
     "Detail of a goal": "目标的细节",
@@ -478,7 +478,7 @@
     "Had a promotion": "有促销",
     "Hamster": "仓鼠",
     "Have a great day,": "祝你有美好的一天，",
-    "he\/him": "他\/他",
+    "he/him": "他/他",
     "Hello!": "您好！",
     "Help": "帮助",
     "Hi :name": "你好:name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "提醒名称",
     "Name of the reverse relationship": "反向关系的名称",
     "Nature of the call": "通话性质",
-    "nephew\/niece": "侄子侄女",
+    "nephew/niece": "侄子侄女",
     "New Password": "新的密码",
     "New to Monica?": "Monica刚认识吗？",
     "Next": "下一个",
@@ -646,7 +646,7 @@
     "nickname": "昵称",
     "No cities have been added yet in any contact’s addresses.": "尚未在任何联系人地址中添加任何城市。",
     "No contacts found.": "未找到联系人。",
-    "No countries have been added yet in any contact’s addresses.": "尚未在任何联系人地址中添加任何国家\/地区。",
+    "No countries have been added yet in any contact’s addresses.": "尚未在任何联系人地址中添加任何国家/地区。",
     "No dates in this month.": "这个月没有日期。",
     "No description yet.": "还没有描述。",
     "No groups found.": "没有找到任何组。",
@@ -696,7 +696,7 @@
     "Password": "密码",
     "Payment Required": "需要付款",
     "Pending Team Invitations": "待处理的团队邀请函",
-    "per\/per": "每\/每",
+    "per/per": "每/每",
     "Permanently delete this team.": "永久删除此团队",
     "Permanently delete your account.": "永久删除您的账户",
     "Permission for :name": ":name 的权限",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "请注明联系方式",
     "Please join Monica": "请加入Monica",
     "Please provide the email address of the person you would like to add to this team.": "请提供您想加入这个团队的人的电子邮件地址。",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "请阅读我们的<link>文档<\/link>以了解有关此功能以及您可以访问哪些变量的更多信息。",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "请阅读我们的<link>文档</link>以了解有关此功能以及您可以访问哪些变量的更多信息。",
     "Please select a page on the left to load modules.": "请选择左侧的页面来加载模块。",
     "Please type a few characters to create a new label.": "请输入几个字符来创建新标签。",
     "Please type a few characters to create a new tag.": "请输入几个字符来创建新标签。",
@@ -835,7 +835,7 @@
     "Setup Key": "设定键",
     "Setup Key:": "设置键：",
     "Setup Telegram": "设置电报",
-    "she\/her": "她\/她",
+    "she/her": "她/她",
     "Shintoist": "神道教",
     "Show Calendar tab": "显示日历选项卡",
     "Show Companies tab": "显示公司选项卡",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "保管库已创建",
     "The vault has been deleted": "保管库已被删除",
     "The vault have been updated": "保险库已更新",
-    "they\/them": "他们\/他们",
+    "they/them": "他们/他们",
     "This address is not active anymore": "该地址不再有效",
     "This device": "当前设备",
     "This email is a test email to check if Monica can send an email to this email address.": "此电子邮件是测试电子邮件，用于检查 Monica 是否可以向此电子邮件地址发送电子邮件。",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "取消存档联系人",
     "unarchived the contact": "取消存档联系人",
     "Unauthorized": "未授权",
-    "uncle\/aunt": "叔叔\/阿姨",
+    "uncle/aunt": "叔叔/阿姨",
     "Undefined": "不明确的",
     "Unexpected error on login.": "登录时出现意外错误。",
     "Unknown": "未知",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "值复制到剪贴板",
     "Vaults contain all your contacts data.": "保险库包含您的所有联系人数据。",
     "Vault settings": "保管库设置",
-    "ve\/ver": "版本\/版本",
+    "ve/ver": "版本/版本",
     "Verification email sent": "验证邮件已发送",
     "Verified": "已验证",
     "Verify Email Address": "验证 E-mail",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "如果需要小数，请用点写出金额，例如 100.50",
     "Written on": "写于",
     "wrote a note": "写了一张纸条",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "年",
     "Years": "年",
     "You are here:": "你在这里：",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "您可以随时更改它。",
     "You can choose how you want Monica to display dates in the application.": "您可以选择 Monica 在应用程序中显示日期的方式。",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "您可以选择应在您的帐户中启用哪些货币，以及不应启用哪些货币。",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "您可以根据自己的品味\/文化自定义联系人的显示方式。也许您想使用詹姆斯·邦德而不是邦德·詹姆斯。这里，你可以随意定义。",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "您可以根据自己的品味/文化自定义联系人的显示方式。也许您想使用詹姆斯·邦德而不是邦德·詹姆斯。这里，你可以随意定义。",
     "You can customize the criteria that let you track your mood.": "您可以自定义让您跟踪心情的标准。",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "您可以在保管库之间移动联系人。这个改变是立竿见影的。您只能将联系人移动到您所属的保管库。所有联系人数据都将随之移动。",
     "You cannot remove your own administrator privilege.": "您无法删除自己的管理员权限。",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "您希望被提醒注意以下事项：",
     "You WILL still have to delete your account on Monica or OfficeLife.": "您仍然需要删除您在 Monica 或 OfficeLife 上的帐户。",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "您已被邀请在开源个人 CRM Monica 中使用此电子邮件地址，以便我们可以使用它向您发送通知。",
-    "ze\/hir": "泽\/希尔",
+    "ze/hir": "泽/希尔",
     "⚠️ Danger zone": "⚠️危险地带",
     "🌳 Chalet": "🌳 小木屋",
     "🏠 Secondary residence": "🏠 第二居所",
