--- a/lang/zh-TW.json
+++ b/lang/zh-TW.json
@@ -220,7 +220,7 @@
     "boss": "老闆",
     "Bought": "買",
     "Breakdown of the current usage": "目前使用情況細分",
-    "brother\/sister": "兄弟姊妹",
+    "brother/sister": "兄弟姊妹",
     "Browser Sessions": "瀏覽器工作階段",
     "Buddhist": "佛教徒",
     "Business": "商業",
@@ -364,7 +364,7 @@
     "Delete the photo": "刪除照片",
     "Delete the slice": "刪除切片",
     "Delete the vault": "刪除保管庫",
-    "Delete your account on https:\/\/customers.monicahq.com.": "刪除您在 https:\/\/customers.monicahq.com 上的帳戶。",
+    "Delete your account on https://customers.monicahq.com.": "刪除您在 https://customers.monicahq.com 上的帳戶。",
     "Deleting the vault means deleting all the data inside this vault, forever. There is no turning back. Please be certain.": "刪除保管庫意味著永久刪除該保管庫內的所有資料。沒有回頭路。請一定。",
     "Description": "描述",
     "Detail of a goal": "目標的細節",
@@ -478,7 +478,7 @@
     "Had a promotion": "有促銷",
     "Hamster": "倉鼠",
     "Have a great day,": "祝你有美好的一天，",
-    "he\/him": "他\/他",
+    "he/him": "他/他",
     "Hello!": "您好！",
     "Help": "幫助",
     "Hi :name": "你好:name",
@@ -638,7 +638,7 @@
     "Name of the reminder": "提醒名稱",
     "Name of the reverse relationship": "反向關係的名稱",
     "Nature of the call": "通話性質",
-    "nephew\/niece": "姪子姪女",
+    "nephew/niece": "姪子姪女",
     "New Password": "新的密碼",
     "New to Monica?": "Monica剛認識嗎？",
     "Next": "下一個",
@@ -696,7 +696,7 @@
     "Password": "密碼",
     "Payment Required": "需要付款",
     "Pending Team Invitations": "待處理的團隊邀請",
-    "per\/per": "每\/每",
+    "per/per": "每/每",
     "Permanently delete this team.": "永久刪除此團隊",
     "Permanently delete your account.": "永久刪除您的帳號",
     "Permission for :name": ":name 的權限",
@@ -729,7 +729,7 @@
     "Please indicate the contacts": "請註明聯絡方式",
     "Please join Monica": "請加入Monica",
     "Please provide the email address of the person you would like to add to this team.": "請提供您想加入這個團隊的人的電子郵件地址。",
-    "Please read our <link>documentation<\/link> to know more about this feature, and which variables you have access to.": "請閱讀我們的<link>文件<\/link>以了解有關此功能以及您可以存取哪些變數的更多資訊。",
+    "Please read our <link>documentation</link> to know more about this feature, and which variables you have access to.": "請閱讀我們的<link>文件</link>以了解有關此功能以及您可以存取哪些變數的更多資訊。",
     "Please select a page on the left to load modules.": "請選擇左側的頁面來載入模組。",
     "Please type a few characters to create a new label.": "請輸入幾個字元來建立新標籤。",
     "Please type a few characters to create a new tag.": "請輸入幾個字元來建立新標籤。",
@@ -835,7 +835,7 @@
     "Setup Key": "設定鍵",
     "Setup Key:": "設定鍵：",
     "Setup Telegram": "設定電報",
-    "she\/her": "她\/她",
+    "she/her": "她/她",
     "Shintoist": "神道教",
     "Show Calendar tab": "顯示日曆選項卡",
     "Show Companies tab": "顯示公司選項卡",
@@ -1069,7 +1069,7 @@
     "The vault has been created": "保管庫已建立",
     "The vault has been deleted": "保管庫已刪除",
     "The vault have been updated": "保險庫已更新",
-    "they\/them": "他們\/他們",
+    "they/them": "他們/他們",
     "This address is not active anymore": "該地址不再有效",
     "This device": "目前裝置",
     "This email is a test email to check if Monica can send an email to this email address.": "此電子郵件是測試電子郵件，用於檢查 Monica 是否可以向此電子郵件地址發送電子郵件。",
@@ -1123,7 +1123,7 @@
     "Unarchive contact": "取消存檔聯絡人",
     "unarchived the contact": "取消存檔聯絡人",
     "Unauthorized": "未授權",
-    "uncle\/aunt": "叔叔\/阿姨",
+    "uncle/aunt": "叔叔/阿姨",
     "Undefined": "不明確的",
     "Unexpected error on login.": "登入時發生意外錯誤。",
     "Unknown": "未知",
@@ -1160,7 +1160,7 @@
     "Value copied into your clipboard": "值複製到剪貼簿",
     "Vaults contain all your contacts data.": "保險庫包含您的所有聯絡人資料。",
     "Vault settings": "保管庫設置",
-    "ve\/ver": "版本\/版本",
+    "ve/ver": "版本/版本",
     "Verification email sent": "驗證郵件已發送",
     "Verified": "已驗證",
     "Verify Email Address": "驗證電子郵件地址",
@@ -1220,7 +1220,7 @@
     "Write the amount with a dot if you need decimals, like 100.50": "如果需要小數，請用點寫出金額，例如 100.50",
     "Written on": "寫於",
     "wrote a note": "寫了一張紙條",
-    "xe\/xem": "xe\/xem",
+    "xe/xem": "xe/xem",
     "year": "年",
     "Years": "年",
     "You are here:": "你在這裡：",
@@ -1234,7 +1234,7 @@
     "You can change that at any time.": "您可以隨時更改它。",
     "You can choose how you want Monica to display dates in the application.": "您可以選擇 Monica 在應用程式中顯示日期的方式。",
     "You can choose which currencies should be enabled in your account, and which one shouldn’t.": "您可以選擇應在您的帳戶中啟用哪些貨幣，以及不應啟用哪些貨幣。",
-    "You can customize how contacts should be displayed according to your own taste\/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "您可以根據自己的品味\/文化自訂聯絡人的顯示方式。也許您想使用詹姆斯龐德而不是邦德詹姆斯。這裡，你可以隨意定義。",
+    "You can customize how contacts should be displayed according to your own taste/culture. Perhaps you would want to use James Bond instead of Bond James. Here, you can define it at will.": "您可以根據自己的品味/文化自訂聯絡人的顯示方式。也許您想使用詹姆斯龐德而不是邦德詹姆斯。這裡，你可以隨意定義。",
     "You can customize the criteria that let you track your mood.": "您可以自訂讓您追蹤心情的標準。",
     "You can move contacts between vaults. This change is immediate. You can only move contacts to vaults you are part of. All the contacts data will move with it.": "您可以在保管庫之間移動聯絡人。這個改變是立竿見影的。您只能將聯絡人移至您所屬的保管庫。所有聯絡人資料都將隨之移動。",
     "You cannot remove your own administrator privilege.": "您無法刪除自己的管理員權限。",
@@ -1268,7 +1268,7 @@
     "You wanted to be reminded of the following:": "您希望被提醒注意以下事項：",
     "You WILL still have to delete your account on Monica or OfficeLife.": "您仍需要刪除您在 Monica 或 OfficeLife 上的帳戶。",
     "You’ve been invited to use this email address in Monica, an open source personal CRM, so we can use it to send you notifications.": "您已被邀請在開源個人 CRM Monica 中使用此電子郵件地址，以便我們可以使用它向您發送通知。",
-    "ze\/hir": "澤\/希爾",
+    "ze/hir": "澤/希爾",
     "⚠️ Danger zone": "⚠️危險地帶",
     "🌳 Chalet": "🌳 小木屋",
     "🏠 Secondary residence": "🏠 第二居所",
